git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@188 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobDomainPeas/multilang/jobDomainPeasBundle_en.properties
@@ -56,11 +56,11 @@ JDP.groupExport = Export the group
 JDP.missingFieldStart = The field '
 JDP.missingFieldEnd = ' is missing
 JDP.minLength = ' must contain at least
-JDP.noSpaces = ' must not contain any space
+JDP.noSpaces = ' must not contain any spaces
 
 JDP.name = Name
-JDP.synchroRule = Synchro rule
-JDP.synchroRuleAvail = Available synchro rules
+JDP.synchroRule = Synchronization rule
+JDP.synchroRuleAvail = Available synchronization rules
 JDP.synchroRuleInfo = <table><tr><td valign=top nowrap><b>DS_AccessLevel = *</b></td><td>All users</td></tr><tr><td valign=top nowrap><b>DS_AccessLevel = A</b></td><td>All administrators</td></tr><tr><td valign=top nowrap><b>DS_AccessLevel = D</b></td><td>All domains administrators</td></tr><tr><td valign=top nowrap><b>DC_<i>property</i> = <i>value</i></b></td><td>All users checking the equality (for SQL and LDAP domains only)</td></tr></table>
 
 JDP.properties = Properties settings
@@ -79,7 +79,7 @@ JDP.ligne = - Line
 JDP.colonne = Column
 JDP.valeur = Value
 JDP.obligatoire = This is a required field  
-JDP.nbCarMax = The value must not exceed
+JDP.nbCarMax = The value must not be greater than
 JDP.nbCarMin = The value must contain at least
 JDP.caracteres = characters
 JDP.espaces = The value must not contain any spaces
