--- a/config-core/src/main/config/properties/com/silverpeas/jobOrganizationPeas/multilang/jobOrganizationPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobOrganizationPeas/multilang/jobOrganizationPeasBundle_en.properties
@@ -22,12 +22,12 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 JOP.pseudoSpace = Administration
-JOP.pseudoPeas = Silverpeas Organization
+JOP.pseudoPeas = Silverpeas Organisation
 JOP.noSelection = No user or group selected
 JOP.select = Select another user or group
 JOP.parentGroup = Parent group
 JOP.groups = Group membership
-JOP.spaces = Manageable spaces
+JOP.spaces = Manage spaces
 JOP.profiles = Profile membership
 JOP.profile = Profile
 JOP.instance = Instance
