--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
@@ -84,7 +84,7 @@ JSPP.roleDescription = Role description
 
 //erreurs
 MustContainsText = must be completed
-ThisFormContains = Warning! this form contains 
+ThisFormContains = Warning! This form contains 
 ContainsTooLargeText = must not contain more than 
 NbMaxTextArea = 2000 
 Characters = characters
@@ -118,28 +118,28 @@ JSPP.CopyOf = Copy of
 JSPP.SpaceIn = Move in the space
 JSPP.SpacesNotInMaintenance = The origin and destination space must be in Maintenance mode...
 JSPP.MessageConfirmMovingComponentInSpace = Do you really want to move this component in this space?
-JSPP.ExistingComponentName = Move not allowed... A component has the same name in the destination space.
+JSPP.ExistingComponentName = Move not allowed. A component already has the same name in the destination space.
 JSPP.movingInProgress = Move in progress...
 
 //Sauvegarde
-JSPP.BackupUnlimited = Backup/Restore some components
-JSPP.BackupSpace = Backup/Restore some components of the space
+JSPP.BackupUnlimited = Backup/Restore components
+JSPP.BackupSpace = Backup/Restore space's components
 
 JSPP.ErrorComponentCreation = Error during the creation of the component 
-JSPP.ErrorComponentUpdate = Error during the update of the component 
+JSPP.ErrorComponentUpdate = Error during the updating of the component 
 JSPP.ErrorComponentMessage = Check that another component of the space does not already have the same name!
 JSPP.ErrorSpaceCreation = Error during the creation of the space 
-JSPP.ErrorSpaceUpdate = Error during the update of the space 
+JSPP.ErrorSpaceUpdate = Error during the updating of the space 
 JSPP.ErrorSpaceMessage = Check that another space on the same level does not already have the same name!
 
 //Corbeille
 JSPP.Bin = Spaces and components bin
-JSPP.BinRemoveDate = Removing date
+JSPP.BinRemoveDate = Remove date
 JSPP.BinRestore = Restore
 JSPP.BinRestoreSelected = Do you really want to restore the selected items?
 JSPP.BinDelete = Remove completely
 JSPP.BinEmpty = The bin is empty!
-JSPP.BinDeleteConfirm =  Do you really want to remove this items and all of its contents?
+JSPP.BinDeleteConfirm =  Do you really want to remove these items and all the contents?
 JSPP.BinDeleteConfirmSelected = Do you really want to remove the selected items and all the contents?
 
 JSPP.publicComponent = Public access
@@ -148,7 +148,7 @@ JSPP.inheritanceBlockedComponent = Rights inheritance
 JSPP.localRights = Local rights
 JSPP.inheritedRights = Inherited rights
 
-JSPP.inheritanceSpaceNotUsed = This subspace does not inherit the space's rights.
+JSPP.inheritanceSpaceNotUsed = This sub-space does not inherit the space's rights.
 JSPP.inheritanceComponentNotUsed = This component does not inherit the space's rights.
 JSPP.inheritanceSpaceUsed = This subspace inherits the space's rights.
 JSPP.inheritanceComponentUsed = This component inherits the space's rights.
