--- a/config-core/src/main/config/properties/com/silverpeas/pdcSubscription/multilang/pdcsubscription_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/pdcSubscription/multilang/pdcsubscription_en.properties
@@ -22,7 +22,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 notification.title = New publication classified
-standartMessage = New publication classified in one of your Center of Interest.
+standartMessage = New publication classified in one of your Centers of Interest.
 Space    = Workspace: 
 Subscription = Center of Interest: 
 Service  = KM Service: 
@@ -30,8 +30,8 @@ Date     = Date:
 URL      = Link: 
 Axis     = Axis: 
 notification.delete.title = Your center of interest has been removed
-deleteOnAxisMessage = An axis of your Center of Interest has been removed. Center of Interest has been removed too.
-deleteOnValueMessage = A value of your Center of Interest has been removed. Center of Interest has been removed too.
+deleteOnAxisMessage = An axis of your Center of Interest has been removed. The Center of Interest has been removed too.
+deleteOnValueMessage = A value of your Center of Interest has been removed. The Center of Interest has been removed too.
 DocumentName = Document: 
 Path = Path: 
 pdcClassification = My Center of Interest.
