--- a/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/PortletRegistry_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/PortletRegistry_en.properties
@@ -52,5 +52,5 @@ errorGettingRoles=Error getting roles from web.xml: {0}
 errorReadingPortletDD=Cannot validate Portlet Deployment Descriptor: {0}
 errorRoleValidation=Error: Cannot Validate Roles, no matching Role {0} in web.xml
 errorReverseRoleMapping=could not look up physical role name from portlet role name {0}
-errorStreamReadWhileUndeploy=Error reading  {0} file.Possible reason could be that {1} is not deployed currently.
+errorStreamReadWhileUndeploy=Error reading  {0} file.Possible reason could be that {1} is not currently deployed .
 errorSavingFile=Error saving portlet.xml file
