--- a/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/WindowInvoker_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/WindowInvoker_en.properties
@@ -49,6 +49,6 @@ GENERIC_ERROR=ERROR: Content not available.
 CONTENT_EXCEPTION=ERROR: Content not available.
 INVALID_MODE_CHANGE_REQUEST=ERROR: Content not available. REASON: Invalid request for a change in portlet mode.
 INVALID_WINDOW_STATE_CHANGE_REQUEST=ERROR: Content not available. REASON: Invalid request for a change in window state.
-CONTAINER_EXCEPTION=Wait..portlet webapp is being deployed.
+CONTAINER_EXCEPTION=Please wait while the Portlet webapp is being deployed.
 # Do not localize PORTAL_INFO
 PORTAL_INFO=OpenPortal Portlet Container 2.0_01
