--- a/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/portletsBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/portletsBundle_en.properties
@@ -42,7 +42,7 @@ portlets.portlet.myTodos.help = This portlet displays all the tasks yet to be co
 portlets.portlet.quickInfos.help = This portlet displays all the current news.
 
 portlets.portlet.componentInstance.help = This portlet displays a portal component. If you do not have access rights, an error message will be displayed.
-portlets.portlet.componentInstance.error.accessForbidden = Non-authorized access!
+portlets.portlet.componentInstance.error.accessForbidden = Access forbidden!
 portlets.portlet.componentInstance.pref.instanceId = Component id
 
 portlets.portlet.iFrame.pref.url = URL
@@ -60,7 +60,7 @@ portlets.createPortletWindow=Add
 portlets.selectBasePortletWindow=Select the window to modify
 portlets.modifyWindow=Modify a window
 portlets.selectWidth=Choose a column
-showHide=Portlet Window
+showHide=Portlet window
 portlets.modifyPortletWindow=Modify
 portlets.show=Display
 portlets.hide=Hide
@@ -74,7 +74,7 @@ portlets.admin.deployPortlets=Deploy a portlet
 portlets.admin.selectWar=Select the .war file containing the portlet
 portlets.admin.selectPortlets=Select the portlet to delete
 portlets.admin.addRoles=Add Roles
-portlets.admin.selectRoles=Select Roles File
+portlets.admin.selectRoles=Select Roles file
 portlets.admin.deploy=Deploy
 portlets.admin.undeploy=Delete
 
@@ -97,7 +97,7 @@ portlets.window.remove=Delete
 portlets.admin.creationSucceeded=Window created successfully 
 portlets.admin.creationFailed=Error during creation of the window 
 portlets.admin.deploymentSucceeded=Portlet deployed 
-portlets.admin.deploymentFailed=Deployment failure
+portlets.admin.deploymentFailed=Failed to deploy
 portlets.admin.undeploymentSucceeded=Portlet deleted successfully 
 portlets.admin.undeploymentFailed=Failed to delete 
 portlets.admin.warNotDeployed=Impossible to deploy the .war file. Deploy manually in {0}
