--- a/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/templatedesigner/multilang/templateDesignerBundle_en.properties
@@ -40,7 +40,7 @@ templateDesigner.maxLength = Maximum size of field
 templateDesigner.rows = Number of lines
 templateDesigner.cols = Number of columns
 templateDesigner.default = Default value
-templateDesigner.host = Name of the LDAP host server
+templateDesigner.host = LDAP host server name
 templateDesigner.port = Port number
 templateDesigner.version = Version number of LDAP protocol
 templateDesigner.baseDN = LDAP connection string
@@ -50,7 +50,7 @@ templateDesigner.searchScope = Search depth level
 templateDesigner.searchFilter = Search filter
 templateDesigner.searchAttribute = Attribute name to return
 templateDesigner.searchTypeOnly = Return only the attribute names (true/false)
-templateDesigner.maxResultDisplayed  = Maximum number of search result returned
+templateDesigner.maxResultDisplayed  = Maximum number of search results returned
 templateDesigner.valueFieldType = Restricted field (1) or free field (2)
 templateDesigner.driverName = JDBC driver class name
 templateDesigner.url = URL connection
