--- a/config-core/src/main/config/properties/com/silverpeas/thesaurusPeas/multilang/thesaurusPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/thesaurusPeas/multilang/thesaurusPeasBundle_en.properties
@@ -75,9 +75,9 @@ thesaurus.none = none
 
 
 //erreurs
-thesaurus.mustContainsText = must be filled in
+thesaurus.mustContainsText = must be completed
 thesaurus.thisFormContains = Warning! This form contains
-thesaurus.containsTooLargeText = must not exceed 
+thesaurus.containsTooLargeText = must not be greater than
 thesaurus.nbMaxTextArea = 2000 
 thesaurus.characters = characters
 thesaurus.show = Show
