--- a/config-core/src/main/config/properties/com/silverpeas/util/multilang/util_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/util/multilang/util_en.properties
@@ -26,7 +26,7 @@ ko = Kb
 mo = Mb
 util.ligne = - Line
 util.colonne = Column
-util.errorType = Error in type: 
+util.errorType = Type error: 
 util.valeur = Value
 util.type = Expected type
 util.colonnesAttendues = Columns of
