--- a/config-core/src/main/config/properties/com/silverpeas/workflow/multilang/workflowEngineBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/workflow/multilang/workflowEngineBundle_en.properties
@@ -24,6 +24,6 @@
 Content = Your text
 titleFieldLabel = Name
 stateFieldLabel = Status
-actionActorFieldLabel = Actor
+actionActorFieldLabel = Actor/Role
 actionDateFieldLabel = Date
 actionLabelFieldLabel = Action
