--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -31,8 +31,8 @@ pdcPeas.editAxis                       = Modify axis
 pdcPeas.editValue                      = Modify value
 pdcPeas.updateValue                    = Update value
 pdcPeas.moveValue                      = Move value
-pdcPeas.editRights						= Manage rights
-pdcPeas.noRights						= You have no permission on this axis.
+pdcPeas.editRights		       = Manage rights
+pdcPeas.noRights		       = You have no permission on this axis.
 
 pdcPeas.value                          = Value
 pdcPeas.daughterValue                  = Daughter value
@@ -51,15 +51,15 @@ pdcPeas.deleteValueImpossibleBegin     = This value cannot be deleted because th
 pdcPeas.deleteValueImpossibleEnd       = is named like a daughter value
 pdcPeas.deleteArbo                     = Delete path
 
-pdcPeas.confirmDeleteArbo              = Are you sure you want to delete the path ?
-pdcPeas.confirmDeleteValue             = Are you sure you want to delete this value ?
-pdcPeas.confirmDeleteAxis              = Are you sure you want to delete your selection ?
-pdcPeas.confirmMoveValue			   = Are you sure you want to move this value and its content ?
+pdcPeas.confirmDeleteArbo              = Are you sure you want to delete the path?
+pdcPeas.confirmDeleteValue             = Are you sure you want to delete this value?
+pdcPeas.confirmDeleteAxis              = Are you sure you want to delete your selection?
+pdcPeas.confirmMoveValue	       = Are you sure you want to move this value and its content?
 
-pdcPeas.confirmDeleteAllManagers	   = Are you sure you want to delete all managers ?
-pdcPeas.deleteAllManagers			   = Remove all managers
-pdcPeas.updateManagers				   = Edit managers list
-pdcPeas.managers					   = Managers
+pdcPeas.confirmDeleteAllManagers       = Are you sure you want to delete all managers?
+pdcPeas.deleteAllManagers	       = Remove all managers
+pdcPeas.updateManagers		       = Edit managers list
+pdcPeas.managers		       = Managers
 
 pdcPeas.createDaughterValue            = Create a daughter value
 pdcPeas.insertMotherValue              = Insert a mother value
@@ -75,8 +75,8 @@ pdcPeas.secondary                      = Secondary
 pdcPeas.secondaryAxis                  = Secondary axis
 pdcPeas.activateThesaurus              = Activate the thesaurus
 pdcPeas.desactivateThesaurus           = Unactivate the thesaurus
-pdcPeas.showSecondaryAxis			   = Display secondary axis
-pdcPeas.hideSecondaryAxis			   = Hide secondary axis
+pdcPeas.showSecondaryAxis	       = Display secondary axis
+pdcPeas.hideSecondaryAxis	       = Hide secondary axis
 
 pdcPeas.classifyPublication            = Classifying
 pdcPeas.classifyAdd                    = Create a new position
@@ -84,7 +84,7 @@ pdcPeas.classifyUpdate                 = Modify a position
 pdcPeas.classifyDelete                 = Delete selected position(s)
 pdcPeas.position                       = Position
 pdcPeas.noPosition                     = No position
-pdcPeas.rootValueNotAllowed			   = Root value is not authorized on following axis
+pdcPeas.rootValueNotAllowed	       = Root value is not authorized on following axis
 
 pdcPeas.path                           = Path
 pdcPeas.variant                        = Variant
@@ -92,45 +92,45 @@ pdcPeas.variants                       = Variant
 pdcPeas.notVariants                    = Invariant
 pdcPeas.optional                       = Optional
 
-pdcPeas.axisAlreadyExist               = A same axis name already exists !
-pdcPeas.valueAlreadyExist              = A same value name already exists !
-pdcPeas.axisCantMove				   = An axis can't be moved !
-pdcPeas.maximumAxisReach               = The maximum number of axis has been reached !
+pdcPeas.axisAlreadyExist               = A same axis name already exists!
+pdcPeas.valueAlreadyExist              = A same value name already exists!
+pdcPeas.axisCantMove		       = An axis cannot be moved!
+pdcPeas.maximumAxisReach               = The maximum number of axis has been reached!
 
-pdcPeas.emptyMotherName                = The field ' Mother value ' is mandatory
-pdcPeas.emptyDaughterName              = The field ' Sister value ' is mandatory
-pdcPeas.emptyName                      = The field ' Name ' is mandatory
+pdcPeas.emptyMotherName                = The field ' Mother value ' is required
+pdcPeas.emptyDaughterName              = The field ' Sister value ' is required
+pdcPeas.emptyName                      = The field ' Name ' is required
 
-pdcPeas.paramPdcPeas                   = Parameterize the use
+pdcPeas.paramPdcPeas                   = Classification settings
 pdcPeas.paramChooseAxis                = Select an axis to be used
-pdcPeas.errorMessage                   = An ascending or downward value with the selected one was already selected like basic value
+pdcPeas.errorMessage                   = An ascending or downward value with the selected one was already selected as the basic value
 pdcPeas.positionExist                  = You cannot change your basic value.
-pdcPeas.paramUsedAxis				   = Parameters
-pdcPeas.Errors                          = Errors:
+pdcPeas.paramUsedAxis		       = Settings
+pdcPeas.Errors                         = Errors:
 
 pdcPeas.mySearchContext                = My search
 pdcPeas.modifySearchContext            = Modify the search
-pdcPeas.searchResult                   = Display the search result
+pdcPeas.searchResult                   = Display the search results
 pdcPeas.addSearchContext               = Add this axis to the search context
 pdcPeas.supprAxisFromContext           = Remove selected axis from search context
 pdcPeas.documentConsult                = Consult the document
 
 //recherche
-pdcPeas.requestSelect =  Choose Request :
-pdcPeas.SearchFind = Keywords :
-pdcPeas.NbResultSearch = Number of results to display : 
-pdcPeas.SortResultSearch = sorting by :
+pdcPeas.requestSelect =  Choose Request:
+pdcPeas.SearchFind = Keywords:
+pdcPeas.NbResultSearch = Number of results to display: 
+pdcPeas.SortResultSearch = sorting by:
 pdcPeas.SortValueSearch.1 = Relevance
 pdcPeas.SortValueSearch.2 = Title
 pdcPeas.SortValueSearch.3 = Author
 pdcPeas.SortValueSearch.4 = Date
 pdcPeas.SortValueSearch.5 = Location
-pdcPeas.DomainSelect = Workspace :
-pdcPeas.ComponentSelect = Service :
-pdcPeas.AuthorSelect = Publisher :
+pdcPeas.DomainSelect = Workspace:
+pdcPeas.ComponentSelect = Service:
+pdcPeas.AuthorSelect = Publisher:
 pdcPeas.AfterDate = After 
 pdcPeas.BeforeDate = Before 
-pdcPeas.NoResult = No Result.
+pdcPeas.NoResult = No Results.
 pdcPeas.OneResult = Only one result.
 pdcPeas.OneResultPage =  document found
 pdcPeas.ManyResultPages =  documents found
@@ -148,7 +148,7 @@ pdcPeas.Preview = Preview
 pdcPeas.Domain = Location
 pdcPeas.Attachment = Attachment
 
-pdcPeas.synSearchExtension = Your research has been extended to the synonyms of
+pdcPeas.synSearchExtension = Your search has been extended to the synonyms of
 pdcPeas.search = Search
 pdcPeas.calendrier = Show the calendar.
 
@@ -175,63 +175,63 @@ pdcPeas.lenDescription = The definition is limited to 1000 characters
 
 pdcPeas.filtre = Filter
 pdcPeas.fullText = Full text
-pdcPeas.requestSelect =  My favorite requests :
+pdcPeas.requestSelect = My favorite requests:
 pdcPeas.saveAsInterestCenter = Save the request
 
 pdcPeas.askOnce.resultTitle = Search results
 pdcPeas.askOnce.Site = site
 pdcPeas.askOnce.Title = title
 pdcPeas.askOnce.Source = source
-pdcPeas.askOnce.subDomainSelect = Domains :
+pdcPeas.askOnce.subDomainSelect = Domains:
 pdcPeas.askOnce.Error = No Result.
 
-pdcSubscription.path = My interest centers
-pdcSubscription.newSubsription = New interest center
+pdcSubscription.path = My centers of interest 
+pdcSubscription.newSubsription = New center of interest
 pdcSubscription.Name = Name
-pdcSubscription.Name.NotEmpty = The field 'Name' must be filled
+pdcSubscription.Name.NotEmpty = The 'Name' field must be filled
 pdcSubscription.Values.NotEmpty = Please select at least one axis
 pdcSubscription.ok = Ok
 pdcSubscription.selection = Selected axis
 
 pdcPeas.docsNumber = Number of documents
 
-pdcPeas.PDCUtilization = Set up the categorization's utilization
+pdcPeas.PDCUtilization = Set up the Classification scheme
 
-fileBoxPlus.CreateNewDocument = Create new document
+fileBoxPlus.CreateNewDocument = Create a new document
 fileBoxPlus.AllDocuments = All documents
-whitePages.CreateAUsercard = Create new user card
+whitePages.CreateAUsercard = Create a new user
 whitePages.AllCards = All user cards
-expertLocator.CreateAUsercard = Create new user card
-expertLocator.AllCards = All user cards
-questionReply.AriseAQuestion = Arise a question
+expertLocator.CreateAUsercard = Create a new user
+expertLocator.AllCards = All users
+questionReply.AriseAQuestion = Ask a question
 questionReply.AddAFAQ = Add a FAQ
 questionReply.AllQuestions = All questions
 
-pdcPeas.TheField = The Field 
+pdcPeas.TheField = The field 
 pdcPeas.MustContainsPostDate = must contain a date later than today
 pdcPeas.MustContainsPostDateToBeginDate = must contain a date later than the start date
 pdcPeas.MustContainsCorrectDate = must contain a correct date
 
 pdcPeas.EndTag = last position
-pdcPeas.DisplayHelp = Display Help
+pdcPeas.DisplayHelp = Display help
 pdcPeas.AideContent = Help
 pdcPeas.SearchEngine = Search engine
-pdcPeas.bestSearch = To have a better search, you can use the following keywords
-pdcPeas.searchAnd = <b>AND</b> to cross your request with two words (for instance, "industry AND japan" to search documents that deal with industry and japan)
-pdcPeas.searchOr = <b>OR</b> to launch a research on two words (for instance, "industry OR japan" to search documents that deal with industry or japan)
-pdcPeas.searchNot = <b>NOT</b> to exclude a word from a research (for instance, "industry NOT japan" to search documents that deal with industry without containing the word japan)
-pdcPeas.searchTronc = * to launch a research on a part of a word (for instance, "indus*" to search documents containing "indus", so we will find documents that contain industry, industrial, ...)
+pdcPeas.bestSearch = To improve your search, you can use the following keywords
+pdcPeas.searchAnd = <b>AND</b> to cross your search using two words (for instance, "industry AND Japan" to search for documents that deal with industry and Japan)
+pdcPeas.searchOr = <b>OR</b> to launch a search on two words (for instance, "industry OR Japan" to search for documents that deal with industry or Japan)
+pdcPeas.searchNot = <b>NOT</b> to exclude a word from a search (for instance, "industry NOT Japan" to search documents that deal with industry without containing the word Japan)
+pdcPeas.searchTronc = * to launch a search on a part of a word (for instance, "indus*" to search for documents containing "indus" (industry, industrial, industrious, industrialization etc)
 
-pdcPeas.helpCol1Header = <b>Use the troncature :</b>
-pdcPeas.helpCol2Header = <b>Use the boolean operators :</b>
-pdcPeas.helpCol3Header = <b>Searching a character string</b>
+pdcPeas.helpCol1Header = <b>Use the troncation:</b>
+pdcPeas.helpCol2Header = <b>Use the boolean operators:</b>
+pdcPeas.helpCol3Header = <b>Searching for a character string</b>
 
-pdcPeas.helpCol1Content1 = To get all the words beginning for example by :
+pdcPeas.helpCol1Content1 = To get all the words beginning with:
 pdcPeas.helpCol1Content2 = HYDRO
-pdcPeas.helpCol1Content3 = Add an asterisk to the end of the word : HYDRO*
+pdcPeas.helpCol1Content3 = Add an asterisk to the end of the word: HYDRO*
 
-pdcPeas.helpCol2Content1 = "Et" est l'opérateur implicite.
-pdcPeas.helpCol2Content2 = Ex. : Chien Chat = Chien AND Chat<br>
+pdcPeas.helpCol2Content1 = "and" is the implicit operator.
+pdcPeas.helpCol2Content2 = Ex. : Dog Cat = Dog AND Cat<br>
 pdcPeas.helpCol2Content3 = And : <b>AND</b>&nbsp;&nbsp;&nbsp;&nbsp;i.e.: Dog AND Cat
 pdcPeas.helpCol2Content4 = Or : <b>OR</b>&nbsp;&nbsp;&nbsp;&nbsp;i.e.: Dog OR Cat
 pdcPeas.helpCol2Content5 = Except : <b>NOT</b>&nbsp;&nbsp;&nbsp;&nbsp;i.e. : Cat NOT Siamese
@@ -243,7 +243,7 @@ pdcPeas.helpCol3Content4 =
 
 pdcPeas.openUserPanelPeas           = Access to user panel
 
-pdcPeas.classifyImpossible = Classifying is impossible for the moment. No classify axis have been defined by the manager.
+pdcPeas.classifyImpossible = Classification is not possible for the moment. No classification axis has been defined by the manager.
 
 pdcPeas.In = In 
 pdcPeas.ToExport = Export selected documents
@@ -256,9 +256,9 @@ pdcPeas.SearchXml = Forms
 
 pdcPeas.Template = Form
 
-pdcPeas.inProgress = Search in progress !<br/>Please wait...
+pdcPeas.inProgress = Searching!<br/>Please wait...
 
-pdcPeas.choiceForm = You must choice a form
+pdcPeas.choiceForm = Please choose a form
 
 pdcPeas.Axe = Axis
 
