--- a/config-core/src/main/config/silvertrace/messages/adminMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/adminMessages_en.properties
@@ -97,20 +97,20 @@ admin.EX_ERR_GET_SPACE_NAMES = Error getting spaces from ids
 admin.EX_ERR_GET_SPACE_PROFILE = Error getting a space profile
 admin.EX_ERR_GET_USER = Error getting spaces from ids
 admin.EX_ERR_GET_USER_ALLOWED_SPACE_IDS = Error getting spaces accessible by the user
-admin.EX_ERR_GET_USER_AVAILABLE_COMPONENT_IDS = Error getting ids of componants accessible by the utilisateur
+admin.EX_ERR_GET_USER_AVAILABLE_COMPONENT_IDS = Error getting IDs of componants accessible by the utilisateur
 admin.EX_ERR_GET_USER_AVAILABLE_INSTANCES_OF_COMPONENT = Error getting accessible user instances for a given type of compoant
-admin.EX_ERR_GET_AVAILABLE_INSTANCES_OF_COMPONENT = Error getting instances of a given type of type de composnant
+admin.EX_ERR_GET_AVAILABLE_INSTANCES_OF_COMPONENT = Error getting instances of a given type of componant
 admin.EX_ERR_GET_USER_BY_ALIAS = Error getting a user by their alias
 admin.EX_ERR_GET_USER_BY_LOGIN_DOMAIN = Error getting a user by their login and domain
 admin.EX_ERR_GET_USER_DETAIL = Error getting user details
 admin.EX_ERR_GET_USER_DETAILS = Error getting details for several users
 admin.EX_ERR_GET_USER_GROUPS = Error getting different groups for a user
-admin.EX_ERR_GET_USER_MANAGEABLE_SPACE_IDS = Error getting manageable component ids 
+admin.EX_ERR_GET_USER_MANAGEABLE_SPACE_IDS = Error getting manageable component IDs 
 admin.EX_ERR_GET_USER_PROFILES = Error getting different roles for a user
 admin.EX_ERR_GET_GROUP_PROFILES = Error getting different roles for a group
 admin.EX_ERR_GET_USER_SPACEPROFILES = Error getting different roles for a space of a user  
 admin.EX_ERR_GET_USERPROFILE = Error getting the user profil
-admin.EX_ERR_GET_USERS = Error getting a list of users from thezir id's
+admin.EX_ERR_GET_USERS = Error getting a list of users from their ID's
 admin.EX_ERR_GET_USERS_FOR_PROFILE_AND_COMPONENT = Error getting users corresponding to a componant and a role
 admin.EX_ERR_GET_USERS_OF_DOMAIN = Error getting users of a domain
 admin.EX_ERR_GET_USERS_OF_PROFILE = Error getting users corresponding to a role
@@ -122,7 +122,7 @@ admin.EX_ERR_GROUP_NOT_IN_USERROLE = The specified group does not belong to the 
 admin.EX_ERR_GROUP_SPECIFIC_ID_FOUND_TWICE = Two distinct groups have the same specific id 
 admin.EX_ERR_INSTANCE_NOT_FOUND = Impossible to find the instance of the componant requested
 admin.EX_ERR_INSTANTIATE_COMPONENTS = Error during the instancing of componants
-admin.EX_ERR_INVALID_GROUP = Invalid Group (id or name not entered, or group null)
+admin.EX_ERR_INVALID_GROUP = Invalid Group (ID or name not entered, or group null)
 admin.EX_ERR_GROUP_PARENT_NOT_PRESENT = The group to be synchronised has no father in the Silverpeas tree structure
 admin.EX_ERR_INVALID_SPACE = Invalid space (name not entered)
 admin.EX_ERR_IS_GROUP_EXIST = Error during the test for the existance of a group
@@ -143,8 +143,8 @@ admin.EX_ERR_RECOVER_USERSETS = Error during the restoring of usersets links
 admin.EX_ERR_RELEASE_ORGANIZATION = Error during the liberation of the organisation
 admin.EX_ERR_RELEASE_SCHEMA = Error during the liberation of the diagram
 admin.EX_ERR_REMOVE_USER_FROM_GROUP = Error during deletion of a user from a group
-admin.EX_ERR_RESET_USERSET_TABLES = Error during the reinitialisation of userset links
-admin.EX_ERR_ROLLBACK = Erreor during rollback
+admin.EX_ERR_RESET_USERSET_TABLES = Error during the re-initialisation of userset links
+admin.EX_ERR_ROLLBACK = Error during rollback
 admin.EX_ERR_SET_COMPONENT = Error during the placement in memory of the componant
 admin.EX_ERR_SET_PROFILE = Error during the placement in memory of the role
 admin.EX_ERR_SET_SPACE = Error during the placement in memory of the space
@@ -196,16 +196,16 @@ admin.MSG_ERR_DELETE_COMPONENT = Error deleting the componant
 admin.MSG_ERR_DELETE_PROFILE = Error deleting the role
 admin.MSG_ERR_DELETE_SPACE = Error deleting the space
 admin.MSG_ERR_DELETE_SPACE_PROFILE = Error deleting the role from the space
-admin.MSG_ERR_GET_ALL_ADMIN_IDS = Error getting the list of administrators' ids
+admin.MSG_ERR_GET_ALL_ADMIN_IDS = Error getting the list of administrators' IDs
 admin.MSG_ERR_GET_ALL_COMPONENT_NAMES = Error getting the list of component names
 admin.MSG_ERR_GET_ALL_COMPONENTS = Error getting the list of components
 admin.MSG_ERR_GET_ALL_DOMAINS = Error getting the list of domains
-admin.MSG_ERR_GET_ALL_GROUP_IDS = Error getting the list of group ids
+admin.MSG_ERR_GET_ALL_GROUP_IDS = Error getting the list of group IDs
 admin.MSG_ERR_GET_ALL_GROUPS = Error getting the list of groups
 admin.MSG_ERR_GET_ALL_PROFILE_NAMES = Error getting the list of names of roles
 admin.MSG_ERR_GET_ALL_SPACE_IDS = Error getting the list of ids of the spaces
 admin.MSG_ERR_GET_ALL_SPACE_PROFILE_NAMES = Error getting the names of roles of the space
-admin.MSG_ERR_GET_ALL_USER_IDS = Error getting the list of user ids
+admin.MSG_ERR_GET_ALL_USER_IDS = Error getting the list of user IDs
 admin.MSG_ERR_GET_ALL_USERS = Error getting the list of users
 admin.MSG_ERR_GET_COMPONENT = Error getting the component
 admin.MSG_ERR_GET_CURRENT_PROFILE = Error getting the user profile
@@ -214,18 +214,18 @@ admin.MSG_ERR_GET_GROUP_NAME = Error getting the name of the group
 admin.MSG_ERR_GET_GROUP_NAMES = Error getting the names of the groups
 admin.MSG_ERR_GET_PROFILE = Error getting the role
 admin.MSG_ERR_GET_PROFILE_LABEL_FROM_NAME = Error getting the commercial name of the role from its technical name
-admin.MSG_ERR_GET_PROFILE_NAME_FROM_LABEL = Error getting the technical  name of the role from its commercialname
+admin.MSG_ERR_GET_PROFILE_NAME_FROM_LABEL = Error getting the technical  name of the role from its commercial name
 admin.MSG_ERR_GET_SPACE = Error getting the space
-admin.MSG_ERR_GET_SPACE_FATHER_IDS = Error getting the ids from father espaces
+admin.MSG_ERR_GET_SPACE_FATHER_IDS = Error getting the IDs from father espaces
 admin.MSG_ERR_GET_SPACE_NAMES = Error getting the names of spaces
 admin.MSG_ERR_GET_SPACE_PROFILE = Error getting the espace role
-admin.MSG_ERR_GET_SUBSPACE_IDS = Error getting the sub-spaces id's
+admin.MSG_ERR_GET_SUBSPACE_IDS = Error getting the sub-spaces ID's
 admin.MSG_ERR_GET_USER = Error getting the user
-admin.MSG_ERR_GET_USER_AVAILABLE_COMPONENT_IDS = Error getting ids from accessible componants 
+admin.MSG_ERR_GET_USER_AVAILABLE_COMPONENT_IDS = Error getting ID's from accessible componants 
 admin.MSG_ERR_GET_USER_AVAILABLE_INSTANCES_OF_COMPONENT = Error getting accessible instances for a given component
 admin.MSG_ERR_GET_AVAILABLE_INSTANCES_OF_COMPONENT = Error getting instances for a given componant
-admin.MSG_ERR_GET_USER_AVAILABLE_SPACE_IDS = Error getting ids for accessible spaces 
-admin.MSG_ERR_GET_USER_AVAILABLE_SUBSPACE_IDS = Error getting ids accessible sub-spaces 
+admin.MSG_ERR_GET_USER_AVAILABLE_SPACE_IDS = Error getting ID's for accessible spaces 
+admin.MSG_ERR_GET_USER_AVAILABLE_SUBSPACE_IDS = Error getting ID's accessible sub-spaces 
 admin.MSG_ERR_GET_USERPROFILE = Error getting the user profile 
 admin.MSG_ERR_GET_USERS_FOR_PROFILE_AND_COMPONENT = Error getting users with a given role for a given instance
 admin.MSG_ERR_IS_SPACE_EXIST = Error during test for the existence of the space
@@ -238,13 +238,13 @@ admin.MSG_ERR_UPDATE_COMPONENT = Error updating the component
 admin.MSG_ERR_UPDATE_PROFILE = Error updating the role
 admin.MSG_ERR_UPDATE_SPACE = Error updating the space
 admin.MSG_ERR_UPDATE_SPACE_PROFILE = Error updating the space role
-admin.MSG_FATAL_GET_GENERAL_ADMIN_ID = Impossible to get the id of the super administrator
-admin.MSG_FATAL_GET_GENERAL_SPACE_ID = Impossible to get the id of the entreprise space 
+admin.MSG_FATAL_GET_GENERAL_ADMIN_ID = Impossible to get the ID of the super administrator
+admin.MSG_FATAL_GET_GENERAL_SPACE_ID = Impossible to get the ID of the space 
 admin.MSG_FATAL_GET_ORGANIZATION = Impossible to get the organisation chart
 admin.MSG_INFO_BUILD_WA_COMPONENT_LIST = Build the list of componants
 admin.MSG_INFO_COMPONENT_FOUND = Componant found
 admin.MSG_INFO_DOMAINSSP_INSTANCE_CREATION = Instancing of the silverpeas driver 
-admin.MSG_INFO_GET_ALL_COMPONENTS = Retrieval of all componants
+admin.MSG_INFO_GET_ALL_COMPONENTS = Retrieving all componants
 admin.MSG_INFO_INSTANCIATE_COMPONENT = Instancing the composant
 admin.MSG_INFO_INSTANCIATEUR_HAS_COMPONENTS = The instancer has found components
 admin.MSG_INFO_INSTANCIATEUR_USAGE1 = Utilisation: instanciateur_Main <componentName>
@@ -256,7 +256,7 @@ admin.MSG_INSTANCIATEUR_RESOURCES_NOT_FOUND = Impossible to read the instancer r
 admin.MSG_USER_ALREADY_LOGGED = The user is already logged on
 admin.MSG_USER_FIRST_ACCESS = First time user access
 admin.MSG_WARN_TRY_TO_DELETE_GENERALADMIN = Attempt to delete super administrator
-admin.MSG_WARN_TRY_TO_DELETE_GENERALSPACE = Attempt to delete entreprise space 
+admin.MSG_WARN_TRY_TO_DELETE_GENERALSPACE = Attempt to delete space 
 
 admin.MSG_ERR_GET_RESTORE_COMPONENT_FROM_BASKET = Impossible to restore the componant from the trash
 admin.MSG_ERR_GET_RESTORE_SPACE_FROM_BASKET = Impossible to restore the space from the trash
