--- a/config-core/src/main/config/silvertrace/messages/agendaMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/agendaMessages_en.properties
@@ -55,7 +55,7 @@ agenda.MSG_GET_DAYS_OFF_FAILED = Impossible to recover days not worked
 
 agenda.EX_CANT_PARSE_FEED = Impossible to parse the incoming rate
 agenda.FEED_LOADING_SUCCESSFULLY = Rate read ok
-agenda.FEED_LOADING_FAILED = Problem during the readiing of the rate
+agenda.FEED_LOADING_FAILED = Problem during the reading of the rate
 agenda.CONNECTION_REFUSED = Connection failure. Please try again.
-agenda.CONNECTIONS_REFUSED = Connection refused after 5 attempts... Error
+agenda.CONNECTIONS_REFUSED = Error! Connection refused after 5 attempts.
 agenda.INVALID_RESPONSE_STATUS = Invalid Answer for the HTTP request (-1)!
