--- a/config-core/src/main/config/silvertrace/messages/attachmentMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/attachmentMessages_en.properties
@@ -23,21 +23,21 @@
 #
 # MODULE : attachment
 #
-attachment.EX_RECORD_NOT_LOAD = Impossible de charger un enregistrement de la base
-attachment.EX_RECORD_NOT_STORE = Impossible de mettre à jour un enregistrement de la base
-attachment.EX_RECORD_NOT_CREATE_ATTACHMENT  = Impossible de créer le document attaché
-attachment_MSG_NOT_DELETE_PATH = Impossible de supprimer le repertoire et ces fichiers contenus
-attachment_MSG_NOT_DELETE_FILE = Impossible de supprimer le fichier
-attachment_EX_NOT_COPY_FILE = Impossible de copier les fichiers
+attachment.EX_RECORD_NOT_LOAD = Impossible to load a save from the database
+attachment.EX_RECORD_NOT_STORE = Impossible update a save from the database
+attachment.EX_RECORD_NOT_CREATE_ATTACHMENT  = Impossible to create the attached document
+attachment_MSG_NOT_DELETE_PATH = Impossible to delete the folder and files 
+attachment_MSG_NOT_DELETE_FILE = Impossible to delete the file
+attachment_EX_NOT_COPY_FILE = Impossible to copy the files
 attachment.EX_FILE_TO_UPLOAD_NOTFOUND = File to upload not found
 attachment.EX_FILE_COPY_ERROR = File copy error
-attachment.NODE_LOCKED=The file is still edited online. Close it before checking in.
+attachment.NODE_LOCKED=The file is still being edited online. Please close it before checking in.
 
 # Update Office documents
-attachment.UPDATE_SILVERID_FAILED = Unable to mark the file with the Silverpeas Id
-attachment.CHECKOUT_FAILED = Error during the checkout of the file
-attachment.CHECKIN_FAILED = Error during the checkin of the file
+attachment.UPDATE_SILVERID_FAILED = Unable to mark the file with the Silverpeas ID
+attachment.CHECKOUT_FAILED = Error during file checkout
+attachment.CHECKIN_FAILED = Error during file checkin
 
 attachment.jcr.create.exception=Error creating node for webdav access.
 attachment.jcr.delete.exception=Error deleting node for webdav access.
-jackrabbit.init=Jackrabbit initialisation
+jackrabbit.init=Initialisation of Jackrabbit 
