--- a/config-core/src/main/config/silvertrace/messages/authenticationMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/authenticationMessages_en.properties
@@ -23,22 +23,22 @@
 #
 # MODULE : authentication
 #
-authentication.EX_SERVER_NOT_FOUND = Le serveur d'authentification n'a pas ete trouve pour ce domaine
-authentication.EX_DOMAIN_NOT_FOUND = Le domaine n'a pas ete trouve dans la base
-authentication.EX_DOMAIN_INFO_ERROR = Erreur pendant l'acces a la table des domaines
-authentication.EX_WRITE_KEY_ERROR = Erreur pendant l'ecriture de la cle d'authentification
+authentication.EX_SERVER_NOT_FOUND = The authentifying server has not been found for this domain
+authentication.EX_DOMAIN_NOT_FOUND = The domain has not been found in the database
+authentication.EX_DOMAIN_INFO_ERROR = Error during access to the table of domains
+authentication.EX_WRITE_KEY_ERROR = Error during the writing of the authentification key
 
-authentication.EX_CANT_INSTANCIATE_SERVER_CLASS = Impossible d'instancier une classe de serveur d'authentification
-authentication.EX_NO_SERVER_AVAILABLE = Il n'y a pas de serveur d'authentification valide !
-authentication.EX_AUTHENTICATION_FAILED_LAST_ERROR = L'authentification a echoue (ci-joint l'echec du dernier serveur)
-authentication.EX_PWD_NOT_AVAILABLE = L'utilisateur ne peut pas s'authentifier a ce serveur (le mot de passe n'est pas fixé)
-authentication.EX_AUTHENTICATION_REJECTED_BY_SERVER = Probleme lors de l'authentification aupres du server
-authentication.EX_AUTHENTICATION_BAD_CREDENTIAL = Authentification rejetee par le serveurs d'authentification
-authentication.EX_AUTHENTICATION_HOST_ERROR = Impossible de joindre le serveur d'authentification
-authentication.EX_LOGIN_EMPTY = Le login de l'utilisateur ne doit pas etre vide
-authentication.EX_PWD_EMPTY = Le password LDAP de l'utilisateur ne doit pas etre vide
-authentication.EX_USER_NOT_FOUND = Utilisateur non trouve ou attribut Login invalide
-authentication.EX_USER_REJECTED = L'authentification de l'utilisateur a echouee
+authentication.EX_CANT_INSTANCIATE_SERVER_CLASS = Impossible to instance an authentification server class
+authentication.EX_NO_SERVER_AVAILABLE = No valid authentification server!
+authentication.EX_AUTHENTICATION_FAILED_LAST_ERROR = Authentification failed (see attached failure  from last server)
+authentication.EX_PWD_NOT_AVAILABLE = The user cannot authentify themself on this server (the password is not fixed)
+authentication.EX_AUTHENTICATION_REJECTED_BY_SERVER = Problem during authentification on this server
+authentication.EX_AUTHENTICATION_BAD_CREDENTIAL = Authentification rejected by the authentification servers
+authentication.EX_AUTHENTICATION_HOST_ERROR = Impossible to contact the authentification server
+authentication.EX_LOGIN_EMPTY = The user login must not be empty
+authentication.EX_PWD_EMPTY = The user LDAP password LDAP must not be empty
+authentication.EX_USER_NOT_FOUND = User not found or Login attribute non valid
+authentication.EX_USER_REJECTED = User authentification failed
 
 authentication.EX_LDAP_ACCESS_ERROR = Erreur pendant l'authentification aupres d'un serveur LDAP
 
