--- a/config-core/src/main/config/silvertrace/messages/classifyEngineMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/classifyEngineMessages_en.properties
@@ -23,33 +23,33 @@
 #
 # MODULE : classifyEngine
 #
-classifyEngine.EX_CANT_CLASSIFY_SILVEROBJECTID = Impossible de classer le SilverObjectId
-classifyEngine.EX_CANT_REMOVE_SILVEROBJECTID_POSITION = Impossible de supprimer une position sur le SilverObjectId
-classifyEngine.EX_CANT_UPDATE_SILVEROBJECTID_POSITION = Impossible de modifier une position sur le SilverObjectId
-classifyEngine.EX_CANT_FIND_SILVEROBJECTID = Impossible de trouver les SilverObjectIds
-classifyEngine.EX_CANT_REMOVE_ALLPOSITIONVALUES = Impossible de supprimer les valeurs sur toutes les positions d'un axe
-classifyEngine.EX_CANT_REPLACE_VALUES = Impossible de remplacer les valeurs
-classifyEngine.EX_CANT_LOAD_REGISTERED_AXIS = Impossible de charger les axes enregistrés
-classifyEngine.EX_NOMORE_AVAILABLE_AXIS = Plus d'axes libres
-classifyEngine.EX_CANT_REGISTER_AXIS = Impossible d'enregistrer l'axe
-classifyEngine.EX_CANT_UNREGISTER_AXIS = Impossible de désenregister l'axe
-classifyEngine.EX_AXIS_ALREADY_REGISTERED = l'axe est déjà enregistré
-classifyEngine.EX_CANT_REMOVE_EMPTYPOSITIONS = Impossible de supprimer les positions vides
-classifyEngine.EX_CANT_GET_SILVERCONTENTIDS_BYSILVEROBJECTIDS = Impossible de trouver les SilverContentIds avec les PositionIds
-classifyEngine.EX_CANT_GET_PERTINENT_AXIS = Impossible de rendre les axes pertinents
-classifyEngine.EX_CANT_GET_PERTINENT_VALUES = Impossibles de rendre les valeurs pertinentes
+classifyEngine.EX_CANT_CLASSIFY_SILVEROBJECTID = Impossible to classify SilverObjectId
+classifyEngine.EX_CANT_REMOVE_SILVEROBJECTID_POSITION = Impossible to delete a position on the SilverObjectId
+classifyEngine.EX_CANT_UPDATE_SILVEROBJECTID_POSITION = Impossible de modify a position on the SilverObjectId
+classifyEngine.EX_CANT_FIND_SILVEROBJECTID = Impossible to find the SilverObjectIds
+classifyEngine.EX_CANT_REMOVE_ALLPOSITIONVALUES = Impossible to delete the values on all the positions of an axis
+classifyEngine.EX_CANT_REPLACE_VALUES = Impossible to replace the values
+classifyEngine.EX_CANT_LOAD_REGISTERED_AXIS = Impossible to load the axis saved
+classifyEngine.EX_NOMORE_AVAILABLE_AXIS = No axis free
+classifyEngine.EX_CANT_REGISTER_AXIS = Impossible to save the axis
+classifyEngine.EX_CANT_UNREGISTER_AXIS = Impossible to cancel the axis saved
+classifyEngine.EX_AXIS_ALREADY_REGISTERED = The axis is already saved
+classifyEngine.EX_CANT_REMOVE_EMPTYPOSITIONS = Impossible to delete the empty positions
+classifyEngine.EX_CANT_GET_SILVERCONTENTIDS_BYSILVEROBJECTIDS = Impossible to find the SilverContentIds with the PositionIds
+classifyEngine.EX_CANT_GET_PERTINENT_AXIS = Impossible to make the axis pertinent
+classifyEngine.EX_CANT_GET_PERTINENT_VALUES = Impossible to make the values pertinent
 
 # Checks on parameters
-classifyEngine.EX_INCORRECT_SILVEROBJECTID = Le SilverObjectId est incorrect
-classifyEngine.EX_POSITION_NULL = La position donnée en paramètre est null
-classifyEngine.EX_CRITERIAS_ARRAY_NULL = Le tableau de critères donné en paramètre est null
-classifyEngine.EX_CRITERIAS_ARRAY_EMPTY = Le tableau de critères donné en paramètre est vide
-classifyEngine.EX_INCORRECT_AXISID_CRITERIA = L'id de l'axe contenu dans le critère est incorrect
-classifyEngine.EX_NULL_VALUE_POSITION = Le tableau de values de la position est null
-classifyEngine.EX_EMPTY_VALUE_POSITION = Le tableau de values de la position est vide
-classifyEngine.EX_INCORRECT_AXISID_VALUE = L'id de l'axe contenu dans la value est incorrect
-classifyEngine.EX_AXISVALUES_NOT_IDENTICAL = Les Ids d'axes des deux valeurs ne sont pas identiques
-classifyEngine.EX_VALUES_IDENTICAL = Les valeurs à remplacer sont identiques
-classifyEngine.EX_CANT_GET_PHYSICAL_AXIS = Impossible de trouver l'axisId physique
-classifyEngine.EX_CANT_GET_LOGICAL_AXIS = Impossible de trouver l'axisId logique
+classifyEngine.EX_INCORRECT_SILVEROBJECTID = The SilverObjectId is not correct
+classifyEngine.EX_POSITION_NULL = The position given as a setting is null
+classifyEngine.EX_CRITERIAS_ARRAY_NULL = The table of criteria given as a setting is null
+classifyEngine.EX_CRITERIAS_ARRAY_EMPTY = The table of criteria given as a setting is empty
+classifyEngine.EX_INCORRECT_AXISID_CRITERIA = The axis ID contained in the criteria is incorrect
+classifyEngine.EX_NULL_VALUE_POSITION = The table of values of the position is null
+classifyEngine.EX_EMPTY_VALUE_POSITION = The table of values of the position is empty
+classifyEngine.EX_INCORRECT_AXISID_VALUE = The axis ID contained in the value is incorrect
+classifyEngine.EX_AXISVALUES_NOT_IDENTICAL = The axis IDs of the two values are not identical
+classifyEngine.EX_VALUES_IDENTICAL = The values to be replaced are identical
+classifyEngine.EX_CANT_GET_PHYSICAL_AXIS = Impossible to find the physical axisId 
+classifyEngine.EX_CANT_GET_LOGICAL_AXIS = Impossible to find the logical axisId
 
