--- a/config-core/src/main/config/silvertrace/messages/clipboardPeasMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/clipboardPeasMessages_en.properties
@@ -25,13 +25,13 @@
 #
 #
 
-clipboardPeas.SO_NOT_COMPATIBLE            = SilverObject non compatible pour copie
-clipboardPeas.COPY_ERROR                   = Impossible d'ajouter l'object au presse-papier
-clipboardPeas.MSG_CANT_GET_MSG_BUNDLE      = Impossible d'obtenir le fiche multilangue
-clipboardPeas.MSG_CANT_GET_MSG_ERROR       = Impossible d'obtenir le message d'erreur
-clipboardPeas.EX_CANT_GET_MSG_ERROR        = Erreur pendant la lecture du presse-papier
-clipboardPeas.EX_CANT_GET_MSG_ERROR        = Impossible d'ontenir la langue par défaut
-clipboardPeas.EX_CANT_GET_MESSAGE          = Impossible d'obtenir le message
-clipboardPeas.EX_CANT_GET_DEFAULT_LANGUAGE = Impossible d'obtenir la langue par défault
-clipboardPeas.EX_CANT_GET_COMPO_LABEL      = Impossible d'obtenir le nom du composant
-clipboardPeas.EX_CANT_WRITE                = Erreur pendant l'écriture
+clipboardPeas.SO_NOT_COMPATIBLE            = SilverObject is not compatible for copy
+clipboardPeas.COPY_ERROR                   = Impossible to add object to clipboard
+clipboardPeas.MSG_CANT_GET_MSG_BUNDLE      = Impossible to get the multi-lingual file
+clipboardPeas.MSG_CANT_GET_MSG_ERROR       = Impossible to get the error message
+clipboardPeas.EX_CANT_GET_MSG_ERROR        = Error during reading of clipboard
+clipboardPeas.EX_CANT_GET_MSG_ERROR        = Impossible to get default language
+clipboardPeas.EX_CANT_GET_MESSAGE          = Impossible to get the message
+clipboardPeas.EX_CANT_GET_DEFAULT_LANGUAGE = Impossible to get default language
+clipboardPeas.EX_CANT_GET_COMPO_LABEL      = Impossible to get the name of the component
+clipboardPeas.EX_CANT_WRITE                = Error during writing
