--- a/config-core/src/main/config/silvertrace/messages/commentMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/commentMessages_en.properties
@@ -23,13 +23,13 @@
 #
 # MODULE : comment
 #
-comment.CREATING_NEW_DOCUMENT_FAILED = New document creation failed
-comment.ADDING_NEW_DOCUMENT_VERSION_FAILED = New document version adding failed
-comment.UPDATING_DOCUMENT_FAILED = Document modification failed
-comment.CHECK_DOCUMENT_OUT = Check out operation failed
-comment.CHECK_DOCUMENT_IN = Check in operation failed
-comment.GETTING_ALL_DOCUMENT_VERSIONS_FAILED = Getting all document versions failed
-comment.GETTING_LAST_DOCUMENTS_VERSION_FAILED = Getting last document versions for this publication failed
-comment.GETTING_LAST_PUBLIC_DOCUMENTS_FAILED = Getting last document public versions for this publication failed
-comment.GETTING_LAST_PUBLIC_AND_LAST_ARCHIVE_DOCUMENTS_VERSION_FAILED = Getting last document public and archive versions for this publication failed
+comment.CREATING_NEW_DOCUMENT_FAILED = Failed to create new document 
+comment.ADDING_NEW_DOCUMENT_VERSION_FAILED = Failed to add new version of document
+comment.UPDATING_DOCUMENT_FAILED = Failed to modify document
+comment.CHECK_DOCUMENT_OUT = Failed to check out
+comment.CHECK_DOCUMENT_IN = Failed to check in
+comment.GETTING_ALL_DOCUMENT_VERSIONS_FAILED = Failed to get all document versions
+comment.GETTING_LAST_DOCUMENTS_VERSION_FAILED = Failed to get last document versions for this publication
+comment.GETTING_LAST_PUBLIC_DOCUMENTS_FAILED = Failed to get last public document versions for this publication
+comment.GETTING_LAST_PUBLIC_AND_LAST_ARCHIVE_DOCUMENTS_VERSION_FAILED = Failed to get last document public and archive versions for this publication
 
