--- a/config-core/src/main/config/silvertrace/messages/containerManagerMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/containerManagerMessages_en.properties
@@ -24,35 +24,35 @@
 # MODULE : containerManager
 #
 # Checks on the parameters
-containerManager.EX_COMPONENTID_NULL = Le componentID donné est null
-containerManager.EX_COMPONENTID_EMPTY = Le componentID donné est vide
-containerManager.EX_CONTAINERTYPE_NULL = Le containerType donné est null
-containerManager.EX_CONTAINERTYPE_EMPTY = Le containerType donné est vide
-containerManager.EX_CONTENTTYPE_NULL = Le contentType donné est null
-containerManager.EX_CONTENTTYPE_EMPTY = Le contentType donné est vide
+containerManager.EX_COMPONENTID_NULL = The componentID given is null
+containerManager.EX_COMPONENTID_EMPTY = The componentID given is empty
+containerManager.EX_CONTAINERTYPE_NULL = the containerType given is null
+containerManager.EX_CONTAINERTYPE_EMPTY = The containerType given is empty
+containerManager.EX_CONTENTTYPE_NULL = The contentType given is null
+containerManager.EX_CONTENTTYPE_EMPTY = The contentType given is empty
 
 # Errors on Instances
-containerManager.EX_CANT_REGISTER_CONTAINER_INSTANCE = Impossible d'enregistrer la nouvelle instance de container
-containerManager.EX_CANT_UNREGISTER_CONTAINER_INSTANCE = Impossible de supprimer une instance de container
-containerManager.EX_CANNOT_FOUND_COMPONENTID = Impossible de trouver le composant
+containerManager.EX_CANT_REGISTER_CONTAINER_INSTANCE = Impossible to save the new container instance
+containerManager.EX_CANT_UNREGISTER_CONTAINER_INSTANCE = Impossible to delete a container instance
+containerManager.EX_CANNOT_FOUND_COMPONENTID = Impossible to find the componant
 
 # Errors on ContainerPeas
-containerManager.EX_CANT_FIND_CONTAINERPEAS = Impossible de trouver un containerPeas
+containerManager.EX_CANT_FIND_CONTAINERPEAS = Impossible to find a containerPeas
 
 # Generic errors on database
-containerManager.EX_CANT_QUERY_DATABASE = Impossible d'executer un select sur la base
-containerManager.EX_CANT_LOAD_ASSO_CACHE = Impossible de charger le cache
+containerManager.EX_CANT_QUERY_DATABASE = Impossible to execute a select on the database
+containerManager.EX_CANT_LOAD_ASSO_CACHE = Impossible to load the cache
 
 # Errors on SilverContent
-containerManager.EX_CANT_REMOVE_SILVERCONTENT = Impossible de supprimer les références du SilverContent
+containerManager.EX_CANT_REMOVE_SILVERCONTENT = Impossible to delete the SilverContent references 
 
 # Errors on interface functions
-containerManager.EX_INTERFACE_FIND_FUNCTIONS = Error sur la fonction find de l'interface ContainerInterface
-containerManager.EX_INTERFACE_REMOVE_FUNCTIONS = Error sur la fonction remove de l'interface ContainerInterface
+containerManager.EX_INTERFACE_FIND_FUNCTIONS = Error of the find function of ContainerInterface interface
+containerManager.EX_INTERFACE_REMOVE_FUNCTIONS = Error of remove function of ContainerInterface interface 
 
 # Errors on links
-containerManager.EX_CANT_ADDLINK_CONTAINER_POSITION = Impossible d'ajouter un lien entre une position et une instance de container
-containerManager.EX_CANT_REMOVELINK_CONTAINER_POSITION = Impossible de supprimer un lien entre une position et une instance de container
-containerManager.EX_CANT_FILTER_POSITIONS = Impossible de filtrer les positions
-containerManager.EX_CANT_FILTER_SILVERCONTENTIDS = Impossible de filtrer les SilverContentIds
-containerManager.EX_CANT_REMOVEALLLINK_POSITIONIDS = Impossible de supprimer les liens sur les positionIds
+containerManager.EX_CANT_ADDLINK_CONTAINER_POSITION = Impossible to add a link between a position and a container instance
+containerManager.EX_CANT_REMOVELINK_CONTAINER_POSITION = Impossible to delete a link between a position and a container instance
+containerManager.EX_CANT_FILTER_POSITIONS = Impossible to filter the positions
+containerManager.EX_CANT_FILTER_SILVERCONTENTIDS = Impossible to filter the SilverContentIds
+containerManager.EX_CANT_REMOVEALLLINK_POSITIONIDS = Impossible to delete the links on the positionIds
