--- a/config-core/src/main/config/silvertrace/messages/contentManagerMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/contentManagerMessages_en.properties
@@ -25,28 +25,28 @@
 #
 
 # Checks on the parameters
-contentManager.EX_COMPONENTID_NULL = Le componentID donné est null
-contentManager.EX_COMPONENTID_EMPTY = Le componentID donné est vide
-contentManager.EX_CONTAINERTYPE_NULL = Le containerType donné est null
-contentManager.EX_CONTAINERTYPE_EMPTY = Le containerType donné est vide
-contentManager.EX_CONTENTTYPE_NULL = Le contentType donné est null
-contentManager.EX_CONTENTTYPE_EMPTY = Le contentType donné est vide
+contentManager.EX_COMPONENTID_NULL = The componentID given is null
+contentManager.EX_COMPONENTID_EMPTY = The componentID given is empty
+contentManager.EX_CONTAINERTYPE_NULL = The containerType given is null
+contentManager.EX_CONTAINERTYPE_EMPTY = The containerType given is empty
+contentManager.EX_CONTENTTYPE_NULL = The contentType given is null
+contentManager.EX_CONTENTTYPE_EMPTY = The contentType given is empty
 
 # Errors on Instances
-contentManager.EX_CANT_REGISTER_CONTENT_INSTANCE = Impossible d'enregistrer la nouvelle instance de content
-contentManager.EX_CANT_UNREGISTER_CONTENT_INSTANCE = Impossible de supprimer une instance de content
-contentManager.EX_CANNOT_FOUND_COMPONENTID = Impossible de trouver le composant
-contentManager.EX_CANT_INSTANCIATE_CONTAINERMANAGER = Impossible d'instancier le ContainerManager
+contentManager.EX_CANT_REGISTER_CONTENT_INSTANCE = Impossible to save the new instance of the content
+contentManager.EX_CANT_UNREGISTER_CONTENT_INSTANCE = IImpossible to delete a new instance of the content
+contentManager.EX_CANNOT_FOUND_COMPONENTID = Impossible to find the componant
+contentManager.EX_CANT_INSTANCIATE_CONTAINERMANAGER = Impossible to instance the ContainerManager
 
 
 # Generic errors on database
-contentManager.EX_CANT_QUERY_DATABASE = Impossible d'executer un select sur la base
-contentManager.EX_UNKNOWN_CONTENT_PEAS = Content Peas inconnu pour ce composant
-contentManager.EX_CANT_LOAD_ASSO_CACHE = Impossible de charger le cache
+contentManager.EX_CANT_QUERY_DATABASE = Impossible to execute a select on the database
+contentManager.EX_UNKNOWN_CONTENT_PEAS = Content Peas unknown for this componant
+contentManager.EX_CANT_LOAD_ASSO_CACHE = Impossible to load the cache
 
 # Errors on SilverContent
-contentManager.EX_CANT_ADD_SILVER_CONTENT = Impossible d'ajouter un SilverContent
-contentManager.EX_CANT_REMOVE_SILVER_CONTENT = Impossible de supprimer un SilverContent
-contentManager.EX_CANT_GET_SILVERCONTENTID = Impossible de trouver un SilverContentId
-contentManager.EX_CANT_GET_INTERNALCONTENTID = Impossible de trouver un InternalContentId
+contentManager.EX_CANT_ADD_SILVER_CONTENT = Impossible to add a SilverContent
+contentManager.EX_CANT_REMOVE_SILVER_CONTENT = Impossible to delete a SilverContent
+contentManager.EX_CANT_GET_SILVERCONTENTID = Impossible to find a SilverContentId
+contentManager.EX_CANT_GET_INTERNALCONTENTID = Impossible to find an InternalContentId
 
