--- a/config-core/src/main/config/silvertrace/messages/coordinatesMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/coordinatesMessages_en.properties
@@ -21,11 +21,11 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-coordinates.COORDINATES_LIST_NOT_AVAILABLE = Impossible d'obtenir les coordonnées
-coordinates.ADDING_COORDINATE_FAILED = Impossible d'ajouter une coordonnée
-coordinates.DELETING_COORDINATES_FAILED = Impossible des supprimer les coordonnées
-coordinates.DELETING_COORDINATES_BY_POINTS_FAILED = Impossible de supprimer les coordonnées à partir de points
-coordinates.ADDING_A_POINT_TO_COORDINATES_FAILED = Impossible d'ajouter un point à toutes les coordonnées
-coordinates.COORDINATES_LIST_BY_POINTS_NOT_AVAILABLE = Impossible d'obtenir les coordonnées à partir d'un point
-coordinates.ADDING_COORDINATES_COMBINATION_FAILED = Impossible d'ajouter une combinaision de coordonnées
+coordinates.COORDINATES_LIST_NOT_AVAILABLE = Impossible to get the coordinates
+coordinates.ADDING_COORDINATE_FAILED = Impossible to add a coordinate
+coordinates.DELETING_COORDINATES_FAILED = Impossible to delete the coordinates
+coordinates.DELETING_COORDINATES_BY_POINTS_FAILED = Impossible to delete the coordinates from points
+coordinates.ADDING_A_POINT_TO_COORDINATES_FAILED = Impossible to add a point to all the coordinates
+coordinates.COORDINATES_LIST_BY_POINTS_NOT_AVAILABLE = Impossible to get the coordinates from a point
+coordinates.ADDING_COORDINATES_COMBINATION_FAILED = Impossible to add a combination of coordinates
 coordinates.ATTACHING_NODES_TO_PUBLICATION_FAILED = Unable to attach the nodes to the publication
