--- a/config-core/src/main/config/silvertrace/messages/fileSharingMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/fileSharingMessages_en.properties
@@ -24,4 +24,4 @@
 # MODULE : fileSharing
 #
 
-fileSharing.EX_ISNOT_A_CORRECTSTUFF = It is not a correct stuff
+fileSharing.EX_ISNOT_A_CORRECTSTUFF = It is not the correct stuff
