--- a/config-core/src/main/config/silvertrace/messages/formMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/formMessages_en.properties
@@ -31,21 +31,21 @@ form.EXP_UNKNOWN_DISPLAYER         = Unknown displayer type
 form.EXP_UNKNOWN_FIELD             = Unknown field
 form.EXP_INDEX_OUT_OF_BOUNDS       = Unknown index
 
-form.INFO_NOT_CORRECT_TYPE = The type of object is not correct, we expect the type : 
-form.EX_NOT_CORRECT_TYPE = The type of object is not correct, we expect the type : 
-form.EX_NOT_CORRECT_VALUE  = The new value of the object is not correct, type of the object : 
-form.EX_ERR_ILLEGAL_PARAMETERS = Incorrect parameters
+form.INFO_NOT_CORRECT_TYPE = The type of object is not correct, we expect the type: 
+form.EX_NOT_CORRECT_TYPE = The type of object is not correct, we expect the type: 
+form.EX_NOT_CORRECT_VALUE  = The new value of the object is not correct, type of the object: 
+form.EX_ERR_ILLEGAL_PARAMETERS = Incorrect settings
 
-form.EXP_MISSING_DISPLAYER_PROPERTIES  = Missing propertie file
+form.EXP_MISSING_DISPLAYER_PROPERTIES  = Missing properties file
 form.EXP_UNKNOWN_CLASS             = Unknown class
 form.EXP_MISSING_EMPTY_CONSTRUCTOR = Missing empty constructor
-form.EXP_NOT_A_DISPLAYER           = The class does not implements a FieldDisplayer
-form.EXP_NOT_A_FIELD               = The class does not implements a Field
-form.EXP_NOT_A_STRING		   = The value has not a String type.
-form.EXP_NOT_AN_USER               = Incorrect value : it must be a user.
-form.EXP_DISPLAYER_CONSTRUCTION_FAILED= Failed to build an instance of displayer
-form.EXP_FIELD_CONSTRUCTION_FAILED = Failed to build an instance of field
-form.EXP_INITIALIZATION_FAILED = Failed to initialize displayers
+form.EXP_NOT_A_DISPLAYER           = The class does not implement a FieldDisplayer
+form.EXP_NOT_A_FIELD               = The class does not implement a Field
+form.EXP_NOT_A_STRING		   = The value does not have a String type.
+form.EXP_NOT_AN_USER               = Incorrect value: it must be a user.
+form.EXP_DISPLAYER_CONSTRUCTION_FAILED= Failed to build an instance of the displayer
+form.EXP_FIELD_CONSTRUCTION_FAILED = Failed to build an instance of the field
+form.EXP_INITIALIZATION_FAILED = Failed to initialize the displayers
 form.EXP_CANT_WRITE = Can't write HTML code
 
 form.EXP_SELECT_FAILED = Failed to select in data base.
@@ -54,7 +54,7 @@ form.EXP_UPDATE_FAILED = Failed to update in data base.
 form.EXP_DELETE_FAILED = Failed to delete in data base.
 form.EXP_CLOSE_FAILED = Error while closing the connection to data base.
 
-form.EX_CANT_PARSE_DATE = Impossible to read field of type Date
+form.EX_CANT_PARSE_DATE = Impossible to read Date field 
 form.EX_CANT_CLOSE_FILE = Impossible to close the file
 form.EX_CANT_OPEN_FILE = Impossible to open the file
 form.EX_CANT_READ_FILE = Impossible to read the file
