--- a/config-core/src/main/config/silvertrace/messages/genericPanelMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/genericPanelMessages_en.properties
@@ -23,8 +23,8 @@
 #
 # MODULE : genericPanel
 #
-# ex : genericPanel.MSG_CANT_ADD_APPENDER                  = L'appender n'a pas pu etre attache
-# ex : genericPanel.EXE_CANT_READ_FILE                     = Impossible de lire le fichier
+# ex : genericPanel.MSG_CANT_ADD_APPENDER                  = The appender could not be attached
+# ex : genericPanel.EXE_CANT_READ_FILE                     = Impossible to read the file
 
-genericPanel.EX_CANT_SEND_SMTP_MESSAGE = Impossible d'envoyer le message via SMTP
-genericPanel.EX_INVALID_ADDRESS = Adresse du destinataire non valide
+genericPanel.EX_CANT_SEND_SMTP_MESSAGE = Impossible to send the message via SMTP
+genericPanel.EX_INVALID_ADDRESS = Receiver address not valid
