--- a/config-core/src/main/config/silvertrace/messages/jcrUtilMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/jcrUtilMessages_en.properties
@@ -24,4 +24,4 @@
 # MODULE : jcrUtil
 #
 
-jcrUtil.EX_ISNOT_A_CORRECTSTUFF = It is not a correct stuff
+jcrUtil.EX_ISNOT_A_CORRECTSTUFF = It is not correct stuff
