--- a/config-core/src/main/config/silvertrace/messages/jobDomainPeasMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/jobDomainPeasMessages_en.properties
@@ -23,11 +23,11 @@
 #
 # MODULE : jobDomain
 #
-# ex : jobDomainPeas.MSG_CANT_ADD_APPENDER                  = L'appender n'a pas pu etre attache
+# ex : jobDomainPeas.MSG_CANT_ADD_APPENDER                  = The appender could not be attached
 
 jobDomainPeas.EX_USER_NOT_AVAILABLE  = The current user is not valid
 jobDomainPeas.EX_GROUP_NOT_AVAILABLE = The current group is not valid
 jobDomainPeas.EX_DOMAIN_NOT_AVAILABLE= The current domain is not valid
-jobDomainPeas.WARN_DOMAIN_SQL_NAME = Warning, the domain name must be unique and must be composed with alphanumerical characters without any space, accent or special characters
-jobDomainPeas.EX_CSV_FILE_NOT_EXIST= Error, the specified file does not exist
-jobDomainPeas.EX_CSV_FILE = The CSV file is not correct :  
+jobDomainPeas.WARN_DOMAIN_SQL_NAME = Warning! The domain name must be unique and composed of alphanumerical characters without any spaces, accents or special characters
+jobDomainPeas.EX_CSV_FILE_NOT_EXIST= Error! The specified file does not exist
+jobDomainPeas.EX_CSV_FILE = The CSV file is not correct:  
