--- a/config-core/src/main/config/silvertrace/messages/jobManagerPeasMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/jobManagerPeasMessages_en.properties
@@ -23,5 +23,4 @@
 #
 # MODULE : jobManager
 #
-# ex : jobManager.MSG_CANT_ADD_APPENDER                  = L'appender n'a pas pu etre attache
-
+# ex : jobManager.MSG_CANT_ADD_APPENDER                  = The appender could not be attached
