--- a/config-core/src/main/config/silvertrace/messages/myLinksMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/myLinksMessages_en.properties
@@ -24,4 +24,4 @@
 # MODULE : myLinks
 #
 
-myLinks.EX_ISNOT_A_CORRECTSTUFF = It is not a correct stuff
+myLinks.EX_ISNOT_A_CORRECTSTUFF = It is not correct stuff
