--- a/config-core/src/main/config/silvertrace/messages/notificationManagerMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/notificationManagerMessages_en.properties
@@ -26,32 +26,32 @@
 notificationManager.EX_GENERAL  = Erreur dans le module Notification Manager
 notificationManager.EX_CANT_CLOSE_SCHEMA  = Erreur lors de la cloture du schema de de la base
 
-notificationManager.EX_CANT_GET_NOTIF_ADDRESSES = Impossible d'obtenir les adresses de notifications
-notificationManager.EX_CANT_GET_NOTIF_ADDRESS = Impossible d'obtenir l'adresse de notification
-notificationManager.EX_CANT_SET_NOTIF_ADDRESS = Impossible d'ecrire l'adresse de notification
-notificationManager.EX_CANT_DEL_NOTIF_ADDRESS = Impossible de supprimer l'adresse de notification
+notificationManager.EX_CANT_GET_NOTIF_ADDRESSES = Impossible to get the notification addresses
+notificationManager.EX_CANT_GET_NOTIF_ADDRESS = Impossible to get the notification address
+notificationManager.EX_CANT_SET_NOTIF_ADDRESS = Impossible to write the notification addresses
+notificationManager.EX_CANT_DEL_NOTIF_ADDRESS = Impossible to delete the notification addresses
 
-notificationManager.EX_CANT_GET_DEFAULT_ADDRESSES = Impossible d'obtenir les adresses de notifications par defaut
-notificationManager.EX_CANT_GET_DEFAULT_ADDRESS = Impossible d'obtenir l'adresse de notification par defaut
-notificationManager.EX_CANT_SET_DEFAULT_ADDRESS = Impossible d'ecrire l'adresse de notification par defaut
+notificationManager.EX_CANT_GET_DEFAULT_ADDRESSES = Impossible to get the default notification addresses
+notificationManager.EX_CANT_GET_DEFAULT_ADDRESS = Impossible to get the defaut notification address 
+notificationManager.EX_CANT_SET_DEFAULT_ADDRESS = Impossible to write the default notification address
 
-notificationManager.EX_CANT_GET_NOTIF_CHANNELS = Impossible d'obtenir les types de medias possibles
+notificationManager.EX_CANT_GET_NOTIF_CHANNELS = Impossible to get the possible types of medias 
 
-notificationManager.EX_CANT_GET_NOTIF_PREFS = Impossible d'obtenir les preferences
-notificationManager.EX_CANT_GET_NOTIF_PREF = Impossible d'obtenir la preference
-notificationManager.EX_CANT_SET_NOTIF_PREF = Impossible d'ecrire la preference
-notificationManager.EX_CANT_DEL_NOTIF_PREF = Impossible de supprimer la preference
+notificationManager.EX_CANT_GET_NOTIF_PREFS = Impossible to get the preferences
+notificationManager.EX_CANT_GET_NOTIF_PREF = Impossible to get the preference
+notificationManager.EX_CANT_SET_NOTIF_PREF = Impossible to write the preferences
+notificationManager.EX_CANT_DEL_NOTIF_PREF = Impossible to delete the preferences
 
-notificationManager.EX_TITLE_TOO_LONG = Le titre est trop long
-notificationManager.EX_MESSAGE_TOO_LONG = Le corps du message est trop long
-notificationManager.EX_CANT_CREATE_TEST_NOTIFICATION = Erreur pendant la construction de la notification de test
-notificationManager.EX_CANT_SEND_TEST_NOTIFICATION = Erreur pendant l'envoi de la notification de test
-notificationManager.EX_CANT_CREATE_USER_NOTIFICATION = Erreur pendant la construction de la notification
+notificationManager.EX_TITLE_TOO_LONG = The title is too long
+notificationManager.EX_MESSAGE_TOO_LONG = The body message is too long
+notificationManager.EX_CANT_CREATE_TEST_NOTIFICATION = Error during building of the test notification 
+notificationManager.EX_CANT_SEND_TEST_NOTIFICATION = Erreur during sending of the test notification
+notificationManager.EX_CANT_CREATE_USER_NOTIFICATION = Erreur during the building of the notification
 notificationManager.EX_CANT_SEND_USER_NOTIFICATION = Erreur pendant l'envoi de la notification
 
-notificationManager.EX_CANT_GET_USERS_OF_GROUP = Impossible de recuperer les utilisateurs d'un groupe
-notificationManager.EX_CANT_GET_COMPONENT_FULL_NAME = Impossible de recuperer le nom complet d'un composant
-notificationManager.EX_CANT_GET_USER_EMAIL = Impossible d'obtenir l'adresse e-mail d'un utilisateur
-notificationManager.EX_CANT_GET_USER_FULL_NAME = Impossible d'obtenir le nom complet d'un utilisateur
+notificationManager.EX_CANT_GET_USERS_OF_GROUP = Impossible to recover the users of a group
+notificationManager.EX_CANT_GET_COMPONENT_FULL_NAME = Impossible to recover the full name of a componant
+notificationManager.EX_CANT_GET_USER_EMAIL = Impossible to get a user's e-mail address
+notificationManager.EX_CANT_GET_USER_FULL_NAME = Impossible to get get a user's full name
 
-notificationManager.MSG_INFO_DUMPNOTIFICATION = Objet de la notification
+notificationManager.MSG_INFO_DUMPNOTIFICATION = Object of the notification
