--- a/config-core/src/main/config/silvertrace/messages/notificationUserMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/notificationUserMessages_en.properties
@@ -23,5 +23,5 @@
 #
 # MODULE : notificationUser
 #
-notificationUser.EX_CANT_GET_SELECTED_GROUPS_INFOS = Impossible d'obtenir des informations sur l'un des groupes selectionnes
-notificationUser.EX_CANT_GET_SELECTED_USERS_INFOS = Impossible d'obtenir des informations sur l'un des utilisateurs selectionnes
+notificationUser.EX_CANT_GET_SELECTED_GROUPS_INFOS = Impossible to get the information about one of the selected groups
+notificationUser.EX_CANT_GET_SELECTED_USERS_INFOS = Impossible to get information about one of the selected users
