--- a/config-core/src/main/config/silvertrace/messages/pdcPeasMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/pdcPeasMessages_en.properties
@@ -25,15 +25,15 @@
 #
 
 # Routeur errors
-pdcPeas.EX_SAVE_IC = Impossible to create Interest Center
-pdcPeas.EX_GET_IC = Impossible to get Interest Center
-pdcPeas.EX_LOAD_IC = Impossible to load Interest Center
+pdcPeas.EX_SAVE_IC = Impossible to create Center of Interest 
+pdcPeas.EX_GET_IC = Impossible to get Center of Interest
+pdcPeas.EX_LOAD_IC = Impossible to load Center of Interest
 pdcPeas.EX_GET_DESTINATION_ERROR = Impossible to find the destination
 pdcPeas.EX_CANT_INITIALIZE_JARGON = Impossible to get the vocabulary used by the user.
-pdcPeas.EX_GET_SYNONYMS = Impossible to get synonymsde récupérer les synonymes
+pdcPeas.EX_GET_SYNONYMS = Impossible to retrieve synonyms
 pdcPeas.MSG_MISSING_STOPWORDS_DEFINITION = Stop words undefined
 pdcPeas.EX_ILLEGAL_FORMED_QUERY = Query illegaly formed
 pdcPeas.EX_CANT_GET_ACTIVE_THESAURUS = Cannot get the Thesaurus status
-pdcPeas.EX_CANT_SET_JARGON_INFO_IN_REQUEST = Cannot set informations thesaurus in the request
+pdcPeas.EX_CANT_SET_JARGON_INFO_IN_REQUEST = Cannot set information thesaurus in the request
 
 pdcPeas.EX_CANT_TRANSFORM_DATE = Cannot transform the date
