--- a/config-core/src/main/config/silvertrace/messages/pdcSubscriptionMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/pdcSubscriptionMessages_en.properties
@@ -21,12 +21,12 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-PdcSubscription.CANNOT_FIND_SUBSCRIPTION_BYUSID  = Cannot find subscription by user id
-PdcSubscription.CANNOT_FIND_SUBSCRIPTION_BYID    = Cannot find subscription by id
-PdcSubscription.NO_SUBSCRIPTION_WITH_ID          = Cannot find any subscription with id provided
+PdcSubscription.CANNOT_FIND_SUBSCRIPTION_BYUSID  = Cannot find subscription by user ID
+PdcSubscription.CANNOT_FIND_SUBSCRIPTION_BYID    = Cannot find subscription by ID
+PdcSubscription.NO_SUBSCRIPTION_WITH_ID          = Cannot find any subscription with ID provided
 PdcSubscription.CANNOT_CREATE_SUBSCRIPTION = Cannot create subscription
 PdcSubscription.CANNOT_UPDATE_SUBSCRIPTION = Cannot update subscription
 PdcSubscription.CANNOT_DELETE_SUBSCRIPTION = Cannot delete subscription
-PdcSubscription.EX_CHECK_SUBSCR_FALIED     = Cannot perform checkSubscription.
-PdcSubscription.EX_CHECK_AXIS_FALIED       = Cannot perform check Axis delete
-PdcSubscription.EX_CHECK_VALUE_FALIED      = Cannot perform check Value delete
+PdcSubscription.EX_CHECK_SUBSCR_FALIED     = Cannot perform check subscription
+PdcSubscription.EX_CHECK_AXIS_FALIED       = Cannot perform check axis delete
+PdcSubscription.EX_CHECK_VALUE_FALIED      = Cannot perform check value delete
