--- a/config-core/src/main/config/silvertrace/messages/personalizationPeasMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/personalizationPeasMessages_en.properties
@@ -24,15 +24,15 @@
 #MODULE : personalizationPeas
 #
 
-personalizationPeas.EX_CANT_GET_PERSONALIZE_DETAIL = Cannot get the personalize informations
+personalizationPeas.EX_CANT_GET_PERSONALIZE_DETAIL = Error getting the personalised information
 personalizationPeas.EX_CANT_SET_LANGUAGE = Cannot set the languages
 personalizationPeas.EX_CANT_GET_LANGUAGE = Cannot get the languages
-personalizationPeas.EX_CANT_SET_FAVORITE_LOOK = Cannot set the favourite look
-personalizationPeas.EX_CANT_GET_FAVORITE_LOOK = Cannot get the favourite look
-personalizationPeas.EX_CANT_GET_FAVORITE_LANGUAGE = Cannot get the favoruite language
+personalizationPeas.EX_CANT_SET_FAVORITE_LOOK = Cannot set the favorite look
+personalizationPeas.EX_CANT_GET_FAVORITE_LOOK = Cannot get the favorite look
+personalizationPeas.EX_CANT_GET_FAVORITE_LANGUAGE = Cannot get the favorite language
 personalizationPeas.EX_CANT_GET_NOTIFICATION_ADDRESSES = Cannot get the notification adresses
-personalizationPeas.EX_CANT_GET_NOTIFICATION_ADDRESS = Cannot get a notification adress
-personalizationPeas.EX_CANT_GET_NOTIFICATION_CHANNELS = Cannot get the communications channels
+personalizationPeas.EX_CANT_GET_NOTIFICATION_ADDRESS = Cannot get a notification address
+personalizationPeas.EX_CANT_GET_NOTIFICATION_CHANNELS = Cannot get the communication channels
 personalizationPeas.EX_CANT_GET_NOTIFICATION_PREFERENCE = Cannot get a preference
 personalizationPeas.EX_CANT_GET_NOTIFICATION_PREFERENCES = Cannot get the preferences
 personalizationPeas.EX_CANT_SET_NOTIFICATION_ADDRESS = Cannot add a notification address
@@ -42,9 +42,9 @@ personalizationPeas.EX_CANT_TEST_NOTIFICATION_ADDRESS = Cannot test the notifica
 personalizationPeas.EX_CANT_GET_DEFAULT_ADDRESS = Cannot get the default adress
 personalizationPeas.EX_CANT_SET_DEFAULT_ADDRESS = Cannot set the default adress
 personalizationPeas.EX_CANT_ADD_NOTIFICATION_PREFERENCE = Cannot add a preference
-personalizationPeas.EX_CANT_GET_INSTANCE_LIST = Cannot get the instancied components
+personalizationPeas.EX_CANT_GET_INSTANCE_LIST = Cannot get the instanced components
 
-personalizationPeas.MSG_CANT_PARSE_ID = Cannot parse WorkSpace id provided
+personalizationPeas.MSG_CANT_PARSE_ID = Cannot parse WorkSpace ID provided
 personalizationPeas.EX_CANT_SET_FAVORITE_COLLWS = Cannot set favorite collaborative workspace
 personalizationPeas.EX_CANT_GET_FAVORITE_COLLWS = Cannot get favorite collaborative workspace
 
