--- a/config-core/src/main/config/silvertrace/messages/popupMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/popupMessages_en.properties
@@ -25,5 +25,5 @@
 #
 popup.EX_CANT_PROCESS_MSG = Unable to process channel='POPUP' message.
 popup.EX_CANT_READ_MSG = Unable to read message in database.
-popup.EX_CANT_DEL_MSG = Unable to delete message in database.
-popup.EX_CANT_PUSH_MSG = Unable to add message in database.
+popup.EX_CANT_DEL_MSG = Unable to delete message from database.
+popup.EX_CANT_PUSH_MSG = Unable to add message to database.
