--- a/config-core/src/main/config/silvertrace/messages/publicationMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/publicationMessages_en.properties
@@ -47,4 +47,4 @@ publication.PUBLICATION_UNFINDABLE =
 
 
 # NEW NEW NEW
-publication.ERROR_KEY_DATA = Erreur dans getKeyData
+publication.ERROR_KEY_DATA = Error in getKeyData
