--- a/config-core/src/main/config/silvertrace/messages/readingControlMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/readingControlMessages_en.properties
@@ -24,8 +24,8 @@
 # MODULE : readingControl
 #
 
-readingControl.EX_ADD_READING_CONTROL_FAILED = Impossible d'enregistrer les controles de lecture
-readingControl.EX_REMOVE_READING_CONTROL_FAILED = Impossible de supprimer les controles de lecture
-readingControl.EX_REMOVE_READING_CONTROL_BY_USER_FAILED = Impossible de supprimer les controles de lecture de cet utilisateur
-readingControl.EX_REMOVE_READING_CONTROL_BY_PUBLICATION_FAILED = Impossible de supprimer les controles de lecture de cet objet
-readingControl.EX_GET_READING_CONTROL_BY_PUBLICATION_FAILED = Impossible d'obtenir les controles de lecture de cet objet
+readingControl.EX_ADD_READING_CONTROL_FAILED = Impossible to save the reading controls
+readingControl.EX_REMOVE_READING_CONTROL_FAILED = Impossible to delete the reading controls
+readingControl.EX_REMOVE_READING_CONTROL_BY_USER_FAILED = Impossible to delete the reading controls of this user
+readingControl.EX_REMOVE_READING_CONTROL_BY_PUBLICATION_FAILED = Impossible to delete the reading controls for this object
+readingControl.EX_GET_READING_CONTROL_BY_PUBLICATION_FAILED = Impossible to obtain reading controls for this object
