--- a/config-core/src/main/config/silvertrace/messages/searchEngineMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/searchEngineMessages_en.properties
@@ -24,14 +24,14 @@
 # MODULE : searchEngine
 #
 
-searchEngine.EXP_PARSE_EXCEPTION = Malformed query
+searchEngine.EXP_PARSE_EXCEPTION = Bad query
 searchEngine.MSG_CORRUPTED_INDEX_FILE = Index file is corrupted
 searchEngine.MSG_CANT_READ_INDEX_FILE = Can't read the index files
 searchEngine.INFO_OPEN_INDEX_FILE = Opening the index file
-searchEngine.INFO_REOPEN_INDEX_FILE = Re-Opening the index file
+searchEngine.INFO_REOPEN_INDEX_FILE = Re-opening the index file
 
 searchEngine.MSG_ASKONCE_LOGGED_IN = Logged in Ask'Once successfully
-searchEngine.MSG_ASKONCE_QUERY_COMPLETED_EVENT = Event received from Ask'Once : Query completed
+searchEngine.MSG_ASKONCE_QUERY_COMPLETED_EVENT = Event received from Ask'Once: Query completed
 searchEngine.MSG_ASKONCE_QUERY_SUBMITTED = Query has been sent to Ask'Once
 searchEngine.MSG_ASKONCE_QUERY_SUCCESSFULLY_COMPLETED = Query has been successfully completed
 searchEngine.MSG_ASKONCE_READY_TO_SUBMIT_QUERY = Query is ready to be sent to Ask'Once
