--- a/config-core/src/main/config/silvertrace/messages/selectionMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/selectionMessages_en.properties
@@ -23,8 +23,8 @@
 #
 # MODULE : selection
 #
-# ex : selection.MSG_CANT_ADD_APPENDER                  = L'appender n'a pas pu etre attache
-# ex : selection.EXE_CANT_READ_FILE                     = Impossible de lire le fichier
+# ex : selection.MSG_CANT_ADD_APPENDER                  = The appender could not be attahced
+# ex : selection.EXE_CANT_READ_FILE                     = Impossible to read the file
 
-selection.EX_CANT_SEND_SMTP_MESSAGE = Impossible d'envoyer le message via SMTP
-selection.EX_INVALID_ADDRESS = Adresse du destinataire non valide
+selection.EX_CANT_SEND_SMTP_MESSAGE = Impossible to send the message via SMTP
+selection.EX_INVALID_ADDRESS = Recipient address  non valid
