--- a/config-core/src/main/config/silvertrace/messages/silvermailMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/silvermailMessages_en.properties
@@ -23,14 +23,13 @@
 #
 # MODULE : SilverMail
 #
-silvermail.EX_CANT_PROCESS_MSG = Impossible de traiter le message du channel 'SILVERMAIL'
-silvermail.EX_CANT_WRITE_MESSAGE = Impossible d'ecrire le message dans la base
-silvermail.EX_CANT_ADD_MESSAGE = Impossible d'ajouter le message
-silvermail.EX_CANT_READ_MSG = Impossible de lire le message dans la base
-silvermail.EX_CANT_DEL_MSG = Impossible d'effacer le message dans la base
-silvermail.EX_CANT_GET_USER_LOGIN = Impossible d'obtenir le login de l'utilisateur
+silvermail.EX_CANT_PROCESS_MSG = Impossible to process the message from 'SILVERMAIL' channel 
+silvermail.EX_CANT_WRITE_MESSAGE = Impossible to write the message to the database
+silvermail.EX_CANT_ADD_MESSAGE = Impossible to add the message
+silvermail.EX_CANT_READ_MSG = Impossible to read the message in the database
+silvermail.EX_CANT_DEL_MSG = Impossible to delete the message in the database
+silvermail.EX_CANT_GET_USER_LOGIN = Impossible to get the user login 
 
-silvermail.EX_NOT_A_REQUESTHANDLER = Cette classe n'implemente pas l'interface RequestHandler
-silvermail.EX_NO_HANDLER = La classe n'a pas pu etre chargee
-silvermail.EX_CANT_BE_INSTANCIATED = La classe n'a pas pu etre instanciee
-
+silvermail.EX_NOT_A_REQUESTHANDLER = This classe does not implement the RequestHandler interface
+silvermail.EX_NO_HANDLER = The class could not be loaded
+silvermail.EX_CANT_BE_INSTANCIATED = The class could not be instanced
