--- a/config-core/src/main/config/silvertrace/messages/silverstatisticsMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/silverstatisticsMessages_en.properties
@@ -23,32 +23,31 @@
 #
 # MODULE : silverstatistics 
 #
-silverstatistics.MSG_CONFIG_FILE      = Le fichier de configuration silverstatistics.properties est mal formé, aucune statistique ne sera mise en base.
-silverstatistics.MSG_NO_CONFIG_FILE   = Un objet StatisticsConfig est nécessaire pour le fonctionnement de la methode
-silverstatistics.MSG_ALIMENTATION_BD  = Les requêtes de mise en base alimentation ont échoué.
-silverstatistics.MSG_CONNECTION_BD    = L'obtention d'une connexion ou la fermeture d'une connextion a échoué.
-silverstatistics.MSG_CONFIG_DATAS     = Les données en entrée de putStats et la configuration ne sont pas cohérentes pour une mise base d'alimentation.
-silverstatistics.MSG_PURGE_BD    	  = La purge d'une table de cumul a échoué.
-
+silverstatistics.MSG_CONFIG_FILE      = The  silverstatistics.properties configuration file is bad. No statistics will be recorded to database.
+silverstatistics.MSG_NO_CONFIG_FILE   = An StatisticsConfig object  is necessairy for the method to fucntion
+silverstatistics.MSG_ALIMENTATION_BD  = Failure of requests for database.
+silverstatistics.MSG_CONNECTION_BD    = Failure to open or close connection.
+silverstatistics.MSG_CONFIG_DATAS     = Entry data for putStats and configuration is not coherent for the database.
+silverstatistics.MSG_PURGE_BD         = Failure to purge the cumul table.
 # Pour TypeStatistics
-silverstatistics.MSG_NAME_STATS_NULL  = Le nom du type de statistique est null
-silverstatistics.MSG_NAME_STATS_EMPTY = Le nom du type de statistique est vide
-silverstatistics.MSG_PURGE_BAD_VALUE  = Attention, la valeur de purge (en mois) est inferieure ou egal a zero, la valeur 3 a ete prise par defaut
-silverstatistics.MSG_TABLE_NAME_STATS_NULL  = Le nom de la table en BD est null
-silverstatistics.MSG_TABLE_NAME_STATS_EMPTY = Le nom de la table en BD est vide
-silverstatistics.MSG_KEY_NAME_STATS_NULL  = Le nom de la cle est null
-silverstatistics.MSG_KEY_NAME_STATS_EMPTY = Le nom de la cle est vide
-silverstatistics.MSG_TYPE_NAME_STATS_NULL  = Le nom du type (pour une cle) est null
-silverstatistics.MSG_TYPE_NAME_STATS_EMPTY = Le nom du type (pour une cle) est vide
-silverstatistics.MSG_TYPE_NAME_STATS_NOT_EXISTS = Le nom du type n'existe pas (le type est à choisir dans : INTEGER, DECIMAL, VARCHAR)
-silverstatistics.MSG_CUMULKEY_NAME_STATS_NULL  = Le nom de la cle de cumul est null
-silverstatistics.MSG_CUMULKEY_NAME_STATS_EMPTY = Le nom de la cle de cumul est vide
-silverstatistics.MSG_CUMULKEY_TYPE_STATS_BAD_VALUE = Le type de la cle de cumul n'est pas INTEGER ou DECIMAL
+silverstatistics.MSG_NAME_STATS_NULL  = The name and type of statistics is null
+silverstatistics.MSG_NAME_STATS_EMPTY = The name of the statistics type is empty
+silverstatistics.MSG_PURGE_BAD_VALUE  = Warning! The purge value purge (in months) is inferior or equal to zero. The value 3 is taken by default.
+silverstatistics.MSG_TABLE_NAME_STATS_NULL  = The name of the table in the database is null
+silverstatistics.MSG_TABLE_NAME_STATS_EMPTY = The name of the table in the database is empty
+silverstatistics.MSG_KEY_NAME_STATS_NULL  = The name of the key is null
+silverstatistics.MSG_KEY_NAME_STATS_EMPTY = The name of the key is empty
+silverstatistics.MSG_TYPE_NAME_STATS_NULL  = The type name is (for a key) is null
+silverstatistics.MSG_TYPE_NAME_STATS_EMPTY = The type name is (for a key) is empty
+silverstatistics.MSG_TYPE_NAME_STATS_NOT_EXISTS = The type name does not exist (the type is chosen from: INTEGER, DECIMAL, VARCHAR)
+silverstatistics.MSG_CUMULKEY_NAME_STATS_NULL  = The name of the cumul key is null
+silverstatistics.MSG_CUMULKEY_NAME_STATS_EMPTY = The name of the cumul key is empty
+silverstatistics.MSG_CUMULKEY_TYPE_STATS_BAD_VALUE = The type of cumul key is neither INTEGER or DECIMAL
 
-silverstatistics.MSG_KEY_RUN_MISSING = La clé StatsRunXXX est manquante
-silverstatistics.MSG_KEY_PURGE_MISSING = La clé StatsPurgeInMonthXXX est manquante
-silverstatistics.MSG_CONFIG_FILE_KEY_MISSING = Le fichier de configuration silverstatistics.properties est mal formé, il manque une clé
+silverstatistics.MSG_KEY_RUN_MISSING = The StatsRunXXX key is missing
+silverstatistics.MSG_KEY_PURGE_MISSING = The StatsPurgeInMonthXXX key is missing
+silverstatistics.MSG_CONFIG_FILE_KEY_MISSING = The silverstatistics.properties configuration file  is bad; a key is missing.
 
-silverstatistics.EX_SUPPLY_VOLUME_COMPONENT_NOT_FOUND = Impossible de trouver l'alimentation du volume du composant 
-silverstatistics.EX_SUPPLY_VOLUME_COMPONENT_NOT_FAILED = Impossible d'alimenter du volume du composant 
+silverstatistics.EX_SUPPLY_VOLUME_COMPONENT_NOT_FOUND = Impossible to find the feed of the volume for the componant 
+silverstatistics.EX_SUPPLY_VOLUME_COMPONENT_NOT_FAILED = Impossible to feed the volume of the componant 
 
