--- a/config-core/src/main/config/silvertrace/messages/smtpMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/smtpMessages_en.properties
@@ -23,10 +23,10 @@
 #
 # MODULE : smtp
 #
-smtp.EX_CANT_PROCESS_MSG = Impossible de gerer le message du channel='SMTP'.
+smtp.EX_CANT_PROCESS_MSG = Impossible to manage the message of channel='SMTP'.
 
-smtp.EX_NO_TARGET_AVAILABLE = Les parametres specifiques SMTP (subject, from, ...) sont introuvables
-smtp.EX_MISSING_PARAMETER = Il manque un ou plusieurs parametres pour pouvoir envoyer le message
-smtp.EX_MISSING_FROM = Il manque le parametre FROM pour pouvoir envoyer le message
-smtp.EX_CANT_SEND_SMTP_MESSAGE = Impossible d'envoyer le message via SMTP
-smtp.EX_INVALID_ADDRESS = Adresse du destinataire non valide
+smtp.EX_NO_TARGET_AVAILABLE = The specific SMTP settings (subject, from, ...) cannot be found
+smtp.EX_MISSING_PARAMETER = One or several parameters are missing to be able to send the message
+smtp.EX_MISSING_FROM = The  FROM parameter is missing to be able to send the message
+smtp.EX_CANT_SEND_SMTP_MESSAGE = Impossible to send the message via SMTP
+smtp.EX_INVALID_ADDRESS = Address of the recipient is not valid
