--- a/config-core/src/main/config/silvertrace/messages/statisticMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/statisticMessages_en.properties
@@ -21,7 +21,7 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-statistic.CANNOT_GET_STATISTICS_NODE = Impossible d'obtenir les statistiques de cet objet
-statistic.CANNOT_ADD_VISITE_NODE = Impossible d'enregistrer la visite de cet objet
-statistic.CANNOT_GET_HISTORY_STATISTICS_PUBLICATION = Impossible d'obtenir les statistiques de cette publication
-statistic.INCORRECT_DATE = Date incorrecte
+statistic.CANNOT_GET_STATISTICS_NODE = Impossible to get statistics on this object
+statistic.CANNOT_ADD_VISITE_NODE = Impossible to save the visit of this object
+statistic.CANNOT_GET_HISTORY_STATISTICS_PUBLICATION = Impossible to get the statistics of this publication
+statistic.INCORRECT_DATE = Date incorrect
