--- a/config-core/src/main/config/silvertrace/messages/subscribeMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/subscribeMessages_en.properties
@@ -21,10 +21,10 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-subscribe.CANNOT_ADD_SUBSCRIBE = Impossible d'ajouter cet abonnement
-subscribe.CANNOT_REMOVE_SUBSCRIBE = Impossible de supprimer cet abonnement
-subscribe.CANNOT_REMOVE_USER_SUBSCRIBES = Impossible de supprimer les abonnements de l'utilisateur
-subscribe.CANNOT_REMOVE_NODE_SUBSCRIBES = Impossible de supprimer les abonnements sur le noeud
-subscribe.CANNOT_GET_USER_SUBSCRIBES = Impossible d'obtenir tous les abonnements de l'utilisateur
-subscribe.CANNOT_GET_USER_SUBSCRIBES_SPACE_COMPONENT = Impossible d'obtenir les abonnements de l'utilisateur de cet espace et de ce composant
-subscribe.CANNOT_GET_NODE_SUBSCRIBERS = Impossible d'obtenir la liste des abonnés à ce noeud
+subscribe.CANNOT_ADD_SUBSCRIBE = Impossible to add this subscription
+subscribe.CANNOT_REMOVE_SUBSCRIBE = Impossible to delete this subscription
+subscribe.CANNOT_REMOVE_USER_SUBSCRIBES = Impossible to delete the user subscriptions
+subscribe.CANNOT_REMOVE_NODE_SUBSCRIBES = Impossible to delete the subscriptions on the node
+subscribe.CANNOT_GET_USER_SUBSCRIBES = Impossible to get all the subscriptions of the user
+subscribe.CANNOT_GET_USER_SUBSCRIBES_SPACE_COMPONENT = Impossible to get the subscriptions of the user of this space and componant
+subscribe.CANNOT_GET_NODE_SUBSCRIBERS = Impossible to get the list of subscribers to this node
