--- a/config-core/src/main/config/silvertrace/messages/thesaurusMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/thesaurusMessages_en.properties
@@ -21,30 +21,30 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-Thesaurus.EX_CANT_GET_LIST_VOCABULARIES = Impossible de récupérer la liste des vocabulaires.
-Thesaurus.EX_CANT_GET_VOCABULARY = Impossible de récupérer le vocabulaire.
-Thesaurus.EX_CANT_GET_VOCABULARY_NAME = Impossible de récupérer le nom du vocabulaire.
-Thesaurus.EX_CREATE_VOCABULARY_FAILED = Impossible de créer le nouveau vocabulaire.
-Thesaurus.EX_UPDATE_VOCABULARY_FAILED = Impossible de mettre à jour le vocabulaire.
-Thesaurus.EX_DELETE_VOCABULARY_FAILED = Impossible de supprimer le vocabulaire.
-Thesaurus.EX_DELETE_SYNONYMS_VOCA_FAILED = Impossible de supprimer les synonymes du vocabulaire.
-Thesaurus.EX_DELETE_SYNONYMS_AXIS_FAILED = Impossible de supprimer les synonymes des termes de l'axe.
-Thesaurus.EX_DELETE_SYNONYMS_TERMS_FAILED = Impossible de supprimer les synonymes des termes.
-Thesaurus.EX_DELETE_JARGONS_FAILED = Impossible de supprimer les affectations d'utilisateurs au vocabulaire.
-Thesaurus.EX_CREATE_SYNONYMS_FAILED = Impossible de créer les synonymes du terme.
-Thesaurus.EX_CANT_GET_SYNONYMS = Impossible de récupérer les synonymes du terme.
-Thesaurus.EX_CANT_GET_SYNONYMS_NAME = Impossible de récupérer les synonymes du terme à partir de son nom.
-Thesaurus.EX_CANT_GET_SYNONYMS_USER = Impossible de récupérer les synonymes d'un mot pour l'utilisateur.
-Thesaurus.EX_UPDATE_SYNONYMS_FAILED = Impossible de mettre à jour les synonymes du terme.
-Thesaurus.EX_DELETE_SYNONYMS_TERM_FAILED = Impossible de supprimer les synonymes du terme.
-Thesaurus.EX_DELETE_SYNONYM_FAILED = Impossible de supprimer le synonyme.
-Thesaurus.EX_CANT_GET_JARGONS = Impossible de récupérer la liste des utilisateurs utilisant le vocabulaire.
-Thesaurus.EX_CANT_GET_JARGONS_USERS = Impossible de récupérer les vocabulaires utilisés par les utilisateurs.
-Thesaurus.EX_DELETE_JARGONS_FAILED = Impossible de supprimer le vocabulaire associé à chacun des utilisateurs de la liste.
-Thesaurus.EX_DELETE_JARGON_FAILED = Impossible de supprimer le vocabulaire associé à l'utilisateur.
-Thesaurus.EX_CREATE_JARGONS_FAILED = Impossible de créer les affectations de vocabulaire aux utilisateurs.
-Thesaurus.EX_CREATE_JARGON_FAILED = Impossible de créer l'affectation de vocabulaire à l'utilisateur.
-Thesaurus.EX_UPDATE_JARGON_FAILED = Impossible de mettre à jour l'affectation de vocabulaire à l'utilisateur.
-Thesaurus.EX_CANT_GET_JARGON = Impossible de récupérer le vocabulaire de l'utilisateur.
+Thesaurus.EX_CANT_GET_LIST_VOCABULARIES = Impossible to retrieve the list of vocabulaires.
+Thesaurus.EX_CANT_GET_VOCABULARY = Impossible to retrieve the vocabulary.
+Thesaurus.EX_CANT_GET_VOCABULARY_NAME = Impossible to retrieve the vocabulary name.
+Thesaurus.EX_CREATE_VOCABULARY_FAILED = Impossible to create the new vocabulary.
+Thesaurus.EX_UPDATE_VOCABULARY_FAILED = Impossible update the le vocabulary.
+Thesaurus.EX_DELETE_VOCABULARY_FAILED = Impossible to delete the vocabulary.
+Thesaurus.EX_DELETE_SYNONYMS_VOCA_FAILED = Impossible to delete the synonyms from the vocabulary.
+Thesaurus.EX_DELETE_SYNONYMS_AXIS_FAILED = Impossible to delete the synonyms of the axis terms.
+Thesaurus.EX_DELETE_SYNONYMS_TERMS_FAILED = Impossible to delete the synonyms of terms.
+Thesaurus.EX_DELETE_JARGONS_FAILED = Impossible to delete the affectations of users to the vocabulary.
+Thesaurus.EX_CREATE_SYNONYMS_FAILED = Impossible to create the synonyms of the term.
+Thesaurus.EX_CANT_GET_SYNONYMS = Impossible to get the synonyms of the term.
+Thesaurus.EX_CANT_GET_SYNONYMS_NAME = Impossible the synonyms of the term from its name.
+Thesaurus.EX_CANT_GET_SYNONYMS_USER = Impossible to get the the synonyms of a word for the user.
+Thesaurus.EX_UPDATE_SYNONYMS_FAILED = Impossible update the synonyms of the term.
+Thesaurus.EX_DELETE_SYNONYMS_TERM_FAILED = Impossible to delete the synonymes of the term.
+Thesaurus.EX_DELETE_SYNONYM_FAILED = Impossible to delete the synonym.
+Thesaurus.EX_CANT_GET_JARGONS = Impossible to get the list of users using the vocabulary.
+Thesaurus.EX_CANT_GET_JARGONS_USERS = Impossible to get the vocabularies used by users.
+Thesaurus.EX_DELETE_JARGONS_FAILED = Impossible to delete the vocabulary associated to each user on the list.
+Thesaurus.EX_DELETE_JARGON_FAILED = Impossible to delete the vocabulary associated to each user.
+Thesaurus.EX_CREATE_JARGONS_FAILED = Impossible to create the affectations of the users' vocabulary.
+Thesaurus.EX_CREATE_JARGON_FAILED = Impossible to create the affectations of the user's vocabulary.
+Thesaurus.EX_UPDATE_JARGON_FAILED = Impossible to update the affectations of the user's vocabulary.
+Thesaurus.EX_CANT_GET_JARGON = Impossible to retrieve the user's vocabulary.
 
 
