--- a/config-core/src/main/config/silvertrace/messages/thesaurusPeasMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/thesaurusPeasMessages_en.properties
@@ -28,8 +28,8 @@
 thesaurusPeas.EX_GET_DESTINATION_ERROR = Impossible de trouver la destination
 
 #SessionController errors
-thesaurusPeas.EX_CANT_GET_AXIS_LIST = Impossible d'obtenir la liste des axes
-thesaurusPeas.EX_CANT_GET_VOCABULARY_LIST  = Impossible d'obtenir la liste des vocabulaires
-thesaurusPeas.EX_CANT_GET_AXIS = Impossible d'obtenir l'axe
-thesaurusPeas.EX_CANT_GET_TERM = Impossible d'obtenir le terme
-thesaurusPeas.EX_CANT_GET_USERPANEL = Impossible d'accèder au userPanel
+thesaurusPeas.EX_CANT_GET_AXIS_LIST = Impossible to obtain the list of axis
+thesaurusPeas.EX_CANT_GET_VOCABULARY_LIST  = Impossible to obtain the list of vocabularies
+thesaurusPeas.EX_CANT_GET_AXIS = Impossible obtain the axis
+thesaurusPeas.EX_CANT_GET_TERM = Impossible obtain the term
+thesaurusPeas.EX_CANT_GET_USERPANEL = Impossible to access the userPanel
