--- a/config-core/src/main/config/silvertrace/messages/applicationIndexerMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/applicationIndexerMessages_en.properties
@@ -25,18 +25,18 @@
 #
 
 applicationIndexer.MSG_INDEXING_ALL_SPACES = Starting indexation of all spaces 
-applicationIndexer.MSG_START_INDEXING_SPACE = Start of indexation of the space
-applicationIndexer.MSG_END_INDEXING_SPACE = End of indexation of the space
+applicationIndexer.MSG_START_INDEXING_SPACE = Starting indexation of the space
+applicationIndexer.MSG_END_INDEXING_SPACE = Ending indexation of the space
 
-applicationIndexer.MSG_START_INDEXING_COMPONENT = Start of indexation of the component
-applicationIndexer.MSG_END_INDEXING_COMPONENT = End of indexation of the component
+applicationIndexer.MSG_START_INDEXING_COMPONENT = Starting indexation of the component
+applicationIndexer.MSG_END_INDEXING_COMPONENT = Ending indexation of the component
 applicationIndexer.EX_INDEXING_COMPONENT_FAILED = Impossible to index the component
 applicationIndexer.EX_INDEXER_COMPONENT_NOT_FOUND = Impossible to find the component indexer
 
 applicationIndexer.MSG_START_INDEXING_PERSONAL_COMPONENT = Starting indexation of the personal space component
 applicationIndexer.MSG_END_INDEXING_PERSONAL_COMPONENT = Ending indexation of the personal space component
-applicationIndexer.EX_INDEXING_PERSONAL_COMPONENT_FAILED = Impossible tp index the personal space component
+applicationIndexer.EX_INDEXING_PERSONAL_COMPONENT_FAILED = Impossible to index the personal space component
 applicationIndexer.EX_INDEXER_PERSONAL_COMPONENT_NOT_FOUND = Impossible to find the personal space component indexer
 
-applicationIndexer.MSG_COMPONENT_INDEXER_NOT_FOUND = Cannot he the personal space component indexer
-applicationIndexer.MSG_INDEXING_COMPONENT_ITEM = Indexation of a component's element
+applicationIndexer.MSG_COMPONENT_INDEXER_NOT_FOUND = Cannot find the personal space component indexer
+applicationIndexer.MSG_INDEXING_COMPONENT_ITEM = Indexing a component's element
