--- a/config-core/src/main/config/silvertrace/messages/calendarMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/calendarMessages_en.properties
@@ -23,57 +23,57 @@
 #
 # MODULE : calendar
 #
-calendar_MSG_NOT_GET_PRIORITY = Impossible d'obtenir le niveau de priorité du journal
-calendar_MSG_NOT_PARSE_DATE = Impossible d'obtenir une date valide
-calendar_MSG_NOT_SCEDULE = Impossible de calculer la durée du programme
-calendar_MSG_GREATER_MAXIMUM_PRIORITY = La priorité doit-être inférieur à la valeur maximum
-calendar_MSG_LOWER_MAXIMUM_PRIORITY = La priorité doit-être supérieur à la valeur minimum
-calendar_MSG_calendar_MSG_CANT_GET_TODO = Impossible d'obtenir un élément avec une date valide
-calendar_MSG_NOT_Get_COPY = Impossible de générer une copie de l'élément
+calendar_MSG_NOT_GET_PRIORITY = Impossible to get the priority level of the journal
+calendar_MSG_NOT_PARSE_DATE = Impossible to get a valid date
+calendar_MSG_NOT_SCEDULE = Impossible to calculate the programme length
+calendar_MSG_GREATER_MAXIMUM_PRIORITY = The priority must be inferior to the maximum value 
+calendar_MSG_LOWER_MAXIMUM_PRIORITY = The priority must be inferior to the minimum value 
+calendar_MSG_calendar_MSG_CANT_GET_TODO = Impossible to get an element with a valid date 
+calendar_MSG_NOT_Get_COPY = Impossible to generate a copy of the element
 
-calendar.calendar.EX_PARAM_NULL = L'élément ne doit pas être null
-calendar.EX_DATE_FIN_ERROR = La date de fin doit être inférieur à la date de début
-calendar.EX_HOUR_FIN_ERROR = L'horaire de fin doit être inférieur à l'horraire de début 
+calendar.calendar.EX_PARAM_NULL = The element must not be null
+calendar.EX_DATE_FIN_ERROR = The end date must be inferior to the start date
+calendar.EX_HOUR_FIN_ERROR = The end time must be inferior to the start time
 
-#les rendez-vous
-calendar.MSG_CANT_GET_JOURNALS = Impossible d'obtenir la liste des rendez-vous
-calendar.MSG_CANT_GET_JOURNAL = Impossible d'obtenir le rendez-vous
-calendar.MSG_CANT_ADD_JOURNAL = Impossible d'ajouter le rendez-vous
-calendar.MSG_CANT_UPDATE_JOURNAL = Impossible de mettre à jour le rendez-vous
-calendar.MSG_CANT_REMOVE_JOURNAL = Impossible de supprimer le rendez-vous
-calendar.MSG_CANT_CHANGE_JOURNAL_ATTENDEES = Impossible de modifier les invités au rendez-vous, vérifiez que le rendez-vous n'a pas été supprimé
-calendar.MSG_CANT_GET_JOURNAL_ATTENDEES = Impossible d'obtenir les invités au rendez-vous
-calendar.MSG_CANT_GET_CATEGORIES = Impossible de récupérer les catégories
-calendar.MSG_CANT_CHANGE_CATEGORIES = Impossible de modifier les catégories
+# Appointmnets
+calendar.MSG_CANT_GET_JOURNALS = Impossible to get the list of appointments
+calendar.MSG_CANT_GET_JOURNAL = Impossible to get the appointment
+calendar.MSG_CANT_ADD_JOURNAL = Impossible to add the appointment
+calendar.MSG_CANT_UPDATE_JOURNAL = Impossible to update the appointment
+calendar.MSG_CANT_REMOVE_JOURNAL = Impossible to delete the appointment
+calendar.MSG_CANT_CHANGE_JOURNAL_ATTENDEES = Impossible to modify those invited to the appointment. Check that the appointment has not been deleted.
+calendar.MSG_CANT_GET_JOURNAL_ATTENDEES = Impossible to get those invited to the appointment.
+calendar.MSG_CANT_GET_CATEGORIES = Impossible to retrieve the categories
+calendar.MSG_CANT_CHANGE_CATEGORIES = Impossible to modify the categories
 
-calendar.EX_RS_EMPTY = L'objet ResultSet est vide
-calendar.EX_NOT_FOUND_JOURNAL = Le rendez-vous à déjà été supprimé, il n'est donc plus disponible
-calendar.EX_ERROR_PARSING_DATE = Erreur de transformation de la date, impossible de récupérer les rendez-vous
+calendar.EX_RS_EMPTY = The  ResultSet objet is empty
+calendar.EX_NOT_FOUND_JOURNAL = The appointment has already been deleted. It is no longer possible.
+calendar.EX_ERROR_PARSING_DATE = Date analysis error. Impossible to retrieve the appointment.
 
-calendar.EX_EXCUTE_INSERT_EMPTY = L'opération preparedStatement.executeUpdate() n'a ajouté aucun enregistrement
-calendar.EX_EXCUTE_UPDATE_EMPTY = L'opération preparedStatement.executeUpdate() n'a modifié aucun enregistrement
-calendar.EX_EXCUTE_DELETE_EMPTY = L'opération preparedStatement.executeUpdate() n'a supprimé aucun enregistrement 
+calendar.EX_EXCUTE_INSERT_EMPTY = The operation preparedStatement.executeUpdate() has not added any save
+calendar.EX_EXCUTE_UPDATE_EMPTY = The operation preparedStatement.executeUpdate() has not modified any save
+calendar.EX_EXCUTE_DELETE_EMPTY = The operation preparedStatement.executeUpdate() has not deleted any save
 
 
-# les todos
-calendar.MSG_CANT_GET_TODOS = Impossible d'obtenir la liste des tâches
-calendar.MSG_CANT_GET_TODO = Impossible d'obtenir la tâche, verifiez qu'elle n'a pas été supprimée
-calendar.MSG_CANT_UPDATE_TODO = Impossible de mettre à jour la tâche, verifiez qu'elle n'a pas été supprimée
-calendar.MSG_CANT_CREATE_TODO = Impossible de créer la tâche
-calendar.MSG_CANT_CHANGE_TODO_ATTENDEES = Impossible de modifier les personnes affectées pour cette tâche, vérifiez qu'elle n'a pas été supprimée
-calendar.MSG_CANT_GET_TODO_ATTENDEES = Impossible d'obtenir les personnes affectées pour cette tâche
+# Todos
+calendar.MSG_CANT_GET_TODOS = Impossible to get the list of tasks
+calendar.MSG_CANT_GET_TODO = Impossible to get the task, check that it hasn't been deleted
+calendar.MSG_CANT_UPDATE_TODO = Impossible to update the task, check that it hasn't been deleted
+calendar.MSG_CANT_CREATE_TODO = Impossible to create the task
+calendar.MSG_CANT_CHANGE_TODO_ATTENDEES = Impossible to modify the people assigned for this task, check that it hasn't been deleted
+calendar.MSG_CANT_GET_TODO_ATTENDEES = Impossible to get the people assigned for this task
 
 # backbone
-calendar.MSG_NEW_BB = Nouvelle instance de l'objet permettant l'acces au  en utilisant le backbone
-calendar.MSG_ADD_ENTRY_FAILED = Impossible de créer cette tâche
-calendar.MSG_UPDATE_ENTRY_FAILED = Impossible de modifier la tâche
-calendar.MSG_CANT_GET = Impossible de récupérer la ou plusieurs tâches de la base
-calendar.MSG_CANT_REMOVE = Impossible de suprimer une ou plusieurs tâches de la base
+calendar.MSG_NEW_BB = New object instance allowing access to  by using the backbone
+calendar.MSG_ADD_ENTRY_FAILED = Impossible to create this task
+calendar.MSG_UPDATE_ENTRY_FAILED = Impossible to modify this task
+calendar.MSG_CANT_GET = Impossible to retrieve the task(s) from the database
+calendar.MSG_CANT_REMOVE = Impossible to delete task(s) from the database
 
 # holidays
-calendar.GETTING_HOLIDAYDATES_FAILED = Impossible de récupérer la liste des jours non travaillés
-calendar.ADDING_HOLIDAYDATE_FAILED = Impossible d'ajouter le jour non travaillé
-calendar.ADDING_HOLIDAYDATES_FAILED = Impossible d'ajouter les jours non travaillés
-calendar.REMOVING_HOLIDAYDATE_FAILED = Impossible de supprimer le jour non travaillé
-calendar.REMOVING_HOLIDAYDATES_FAILED = Impossible de supprimer les jours non travaillés
-calendar.GETTING_HOLIDAYDATE_FAILED = Impossible de récupérer le jour non travaillé
+calendar.GETTING_HOLIDAYDATES_FAILED = Impossible to retrieve the list of days not worked 
+calendar.ADDING_HOLIDAYDATE_FAILED = Impossible to add the day not worked
+calendar.ADDING_HOLIDAYDATES_FAILED = Impossible to add the days not worked
+calendar.REMOVING_HOLIDAYDATE_FAILED = Impossible to delete the day not worked
+calendar.REMOVING_HOLIDAYDATES_FAILED = Impossible to delete the days not worked
+calendar.GETTING_HOLIDAYDATE_FAILED = IImpossible to retrieve the day not worked
