--- a/config-core/src/main/config/silvertrace/messages/contactMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/contactMessages_en.properties
@@ -27,27 +27,27 @@ contact.MSG_ERR_GENERAL  = Erreur dans le module contact
 contact.EX_CONTACTHOME_GET_FAILED = Impossible de trouver contactHome
 contact.EX_CONTACT_NOT_FOUND = Impossible de trouver le contact
 
-contact.EX_SET_CONTACT_DETAIL_FAILED = Impossible d'affecter le détail du contact
-contact.EX_GET_CONTACT_DETAIL_FAILED = Impossible de récupérer le détail du contact
-contact.EX_CONTACT_CREATE_FAILED = Impossible de créer le contact
-contact.EX_CONTACT_DELETE_FAILED = Impossible de supprimer le contact
-contact.EX_CONTACT_RECORD_FAILED = Impossible d'enregistrer le contact
-contact.EX_CONTACT_INFOMODEL_UPDATE_FAILED = Impossible de modifier les infos liées au modèle du contact
-contact.EX_CONTACT_INFOMODEL_CREATE_FAILED = Impossible de créer les infos liées au modèle du contact
-contact.EX_GET_CONTACT_INFOMODEL_FAILED = Impossible de récupérer les infos liées au modèle du contact
-contact.EX_CONTACT_ADD_TO_FATHER_FAILED = Impossible d'attacher le contact à un objet père
-contact.EX_CONTACT_REMOVE_FROM_FATHER_FAILED = Impossible de détacher le contact de l'objet père
-contact.EX_CONTACT_REMOVE_FROM_ALLFATHERS_FAILED = Impossible de détacher le contact de tous ses objets pères
-contact.EX_GET_CONTACT_FATHERS_FAILED = Impossible de récupérer les objets pères du contact 
-contact.EX_CONTACT_ATTACHMENTS_DELETE_FAILED = Impossible de supprimer les pièces jointes du contact
-contact.EX_CONTACT_REMOVE_ALLISSUES_FAILED = Impossible de détacher les objets pères
-contact.EX_GET_CONTACTS_WITHOUT_FATHERS_FAILED = Impossible de récupérer les contacts sans lien vers des objets pères
-contact.EX_DELETE_CONTACTS_WITHOUT_FATHERS_FAILED = Impossible de supprimer les contacts sans lien vers des objets pères
-contact.EX_GET_CONTACTS_FAILED = Impossible de trouver les contacts
-contact.EX_GET_MODELS_FAILED = Impossible de trouver les modèles
-contact.EX_GET_MODEL_DETAIL_FAILED = Impossible de récupérer le détail du modèle
-contact.EX_GET_NB_CONTACTS_FAILED = Impossible de récupérer le nombre de contacts
-contact.EX_CONTACT_CREATE_INDEX_FAILED = Impossible d'indéxer le contact
+contact.EX_SET_CONTACT_DETAIL_FAILED = Impossible to attribute the contact detail
+contact.EX_GET_CONTACT_DETAIL_FAILED = Impossible to retrieve the contact detail
+contact.EX_CONTACT_CREATE_FAILED = Impossible to create the contact
+contact.EX_CONTACT_DELETE_FAILED = Impossible to delete the contact
+contact.EX_CONTACT_RECORD_FAILED = Impossible to save the contact
+contact.EX_CONTACT_INFOMODEL_UPDATE_FAILED = Impossible to modifier the info linked to the contact template
+contact.EX_CONTACT_INFOMODEL_CREATE_FAILED = Impossible to create the info linked to the contact template
+contact.EX_GET_CONTACT_INFOMODEL_FAILED = Impossible to retrieve the infos linked to the contact template
+contact.EX_CONTACT_ADD_TO_FATHER_FAILED = Impossible to attach the contact to a father object 
+contact.EX_CONTACT_REMOVE_FROM_FATHER_FAILED = Impossible to detach the contact from the father object 
+contact.EX_CONTACT_REMOVE_FROM_ALLFATHERS_FAILED = Impossible to detach the contact from all father objects
+contact.EX_GET_CONTACT_FATHERS_FAILED = Impossible to retrieve the father objects  from the contact 
+contact.EX_CONTACT_ATTACHMENTS_DELETE_FAILED = Impossible to delete the attched files from the contact
+contact.EX_CONTACT_REMOVE_ALLISSUES_FAILED = Impossible to detach the father objects
+contact.EX_GET_CONTACTS_WITHOUT_FATHERS_FAILED = Impossible to retrieve the contacts without a link to the father objects
+contact.EX_DELETE_CONTACTS_WITHOUT_FATHERS_FAILED = Impossible to delete the contacts without a link to the father objects
+contact.EX_GET_CONTACTS_FAILED = Impossible to find the contacts
+contact.EX_GET_MODELS_FAILED = Impossible to find the templates
+contact.EX_GET_MODEL_DETAIL_FAILED = Impossible to retrieve the template detail
+contact.EX_GET_NB_CONTACTS_FAILED = Impossible to retrieve the number of contacts
+contact.EX_CONTACT_CREATE_INDEX_FAILED = Impossible to index the contact
 
 
 
