--- a/config-core/src/main/config/silvertrace/messages/favoritMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/favoritMessages_en.properties
@@ -21,9 +21,9 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-favorit.CANNOT_ADD_FAVORIT = Impossible d'ajouter le favori
-favorit.CANNOT_REMOVE_FAVORIT = Impossible de supprimer le favori
-favorit.CANNOT_REMOVE_FAVORIT_BY_USER = Impossible de supprimer les favoris de l'utilisateur
-favorit.CANNOT_REMOVE_FAVORIT_BY_NODE = Impossible de supprimer les favoris concernant ce noeud
-favorit.CANNOT_GET_FAVORIT_BY_USER = Impossible d'obtenir les favoris de l'utilisateur
-favorit.CANNOT_GET_FAVORIT_BY_USER_SPACE_COMPONENT = Impossible d'obtenir les favoris de l'utilisateur pour cet espace et ce composant
+favorit.CANNOT_ADD_FAVORIT = Impossible to add the favorite
+favorit.CANNOT_REMOVE_FAVORIT = Impossible to delete the favorite
+favorit.CANNOT_REMOVE_FAVORIT_BY_USER = Impossible to delete the user favorites
+favorit.CANNOT_REMOVE_FAVORIT_BY_NODE = Impossible to delete the favorites concerning this node
+favorit.CANNOT_GET_FAVORIT_BY_USER = Impossible to obtain the user favorites
+favorit.CANNOT_GET_FAVORIT_BY_USER_SPACE_COMPONENT = Impossible to obtain the user favorites for this space and this componant
