--- a/config-core/src/main/config/silvertrace/messages/jobOrganizationPeasMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/jobOrganizationPeasMessages_en.properties
@@ -23,4 +23,4 @@
 #
 # MODULE : jobOrganization
 #
-# ex : jobOrganization.MSG_CANT_ADD_APPENDER                  = L'appender n'a pas pu etre attache
+# ex : jobOrganization.MSG_CANT_ADD_APPENDER                  = The appender could not be attached
