--- a/config-core/src/main/config/silvertrace/messages/jobStartPagePeasMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/jobStartPagePeasMessages_en.properties
@@ -23,5 +23,5 @@
 #
 # MODULE : jobStartPagePeas
 #
-# ex : jobStartPagePeas.MSG_CANT_ADD_APPENDER                  = L'appender n'a pas pu etre attache
+# ex : jobStartPagePeas.MSG_CANT_ADD_APPENDER                  = The appender could not be attached
 
