--- a/config-core/src/main/config/silvertrace/messages/nodeMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/nodeMessages_en.properties
@@ -21,21 +21,22 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-node.GETTING_NODES_BY_FATHER_FAILED = 
-node.NODE_UNFINDABLE = 
-node.GETTING_NODE_DETAIL_FAILED = 
-node.GETTING_NODE_HEADER_FAILED = 
-node.UPDATING_NODE_FAILED = 
-node.DELETING_NODE_FAILED = 
-node.GETTING_NODE_SONS_FAILED = 
-node.GETTING_NODES_BY_LEVEL_FAILED = 
-node.GETTING_ALL_NODES_FAILED = 
-node.GETTING_NUMBER_OF_SONS_FAILED = 
-node.CREATING_NODE_FAILED = 
-node.KNOWING_IF_SAME_NAME_SAME_LEVEL_ON_CREATION_FAILED = 
-node.KNOWING_IF_SAME_NAME_SAME_LEVEL_ON_UPDATE_FAILED = 
-node.GETTING_PK_OF_SONS_FAILED = 
-node.GETTING_PK_OF_DESCENDANTS_FAILED = 
-node.GETTING_DETAIL_OF_DESCENDANTS_FAILED = 
-node.GETTING_NODE_PATH_FAILED =
-node.REMOVE_TRANSLATIONS_FAILED = Unable to remove  the translations 
+node.GETTING_NODES_BY_FATHER_FAILED = Failed to get noded by father
+node.NODE_UNFINDABLE = Node not found
+node.GETTING_NODE_DETAIL_FAILED = Failed to get node detail
+node.GETTING_NODE_HEADER_FAILED = Failed to get node header
+node.UPDATING_NODE_FAILED = Failed to update node
+node.DELETING_NODE_FAILED = Failed to delete node
+node.GETTING_NODE_SONS_FAILED = Failed to get node by sons
+node.GETTING_NODES_BY_LEVEL_FAILED = Failed to get node by level
+node.GETTING_ALL_NODES_FAILED = Failed to get all noses
+node.GETTING_NUMBER_OF_SONS_FAILED = Failed to get a number of sons
+node.CREATING_NODE_FAILED = Failed to create a node
+node.KNOWING_IF_SAME_NAME_SAME_LEVEL_ON_CREATION_FAILED = Failed to find out if same name is on same level when created
+node.KNOWING_IF_SAME_NAME_SAME_LEVEL_ON_UPDATE_FAILED = Failed to find out if same name is on same level when updated
+node.KNOWING_IF_SAME_NAME_SAME_LEVEL_ON_UPDATE_FAILED = Failed to find out if same name is on same level when updated
+node.GETTING_PK_OF_SONS_FAILED = Failed to get sons
+node.GETTING_PK_OF_DESCENDANTS_FAILED = Failed to get descendants
+node.GETTING_DETAIL_OF_DESCENDANTS_FAILED = Failed to get detail of descendants
+node.GETTING_NODE_PATH_FAILED = Failed to get node path
+node.REMOVE_TRANSLATIONS_FAILED = Failed to remove the translations 
