--- a/config-core/src/main/config/silvertrace/messages/notificationServerMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/notificationServerMessages_en.properties
@@ -29,6 +29,6 @@ notificationServer.EX_NOTIF_DATA_NOT_DEFINED = Les informations de NotificationS
 notificationServer.EX_ERROR_IN_XML_PARSING = Erreur pendant le parsing XML du message. Non compatible avec 'notification.DTD'.
 notificationServer.EX_CANT_SEND_TO_JSM_QUEUE = Impossible d'ajouter le message a la queue JMS
 
-notificationServer.INFO_PROCESS_MESSAGE = Message en cours de traitement...
+notificationServer.INFO_PROCESS_MESSAGE = Message being processed...
 
-notificationServer.INFO_DUMP_NOTIF_DATA = Donnees de la notification
+notificationServer.INFO_DUMP_NOTIF_DATA = Notification data
