--- a/config-core/src/main/config/silvertrace/messages/peasCoreMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/peasCoreMessages_en.properties
@@ -26,30 +26,30 @@
 
 # Erreurs de la personnalisation
 
-peasCore.EX_CANT_GET_FAVORITE_LOOK = Erreur pendant l'obtention du look favorit
-peasCore.EX_CANT_GET_FAVORITE_LANGUAGE = Erreur pendant l'obtention de la langue favorite
+peasCore.EX_CANT_GET_FAVORITE_LOOK = Error obtaining favourite look 
+peasCore.EX_CANT_GET_FAVORITE_LANGUAGE = Error obtaining favourite language
 
 # Erreurs du kit Oreilly
 
-peasCore.EX_MULTIPART_MAX_SIZE_CONVERSION_FAILED = Erreur pendant la conversion vers entier de la propriete MultipartParserMaxSize
-peasCore.EX_MULTIPART_MAX_SIZE_PROPERTY_NOT_FOUND = La propriete 'MultipartParserMaxSize' n'a pas ete trouvee
+peasCore.EX_MULTIPART_MAX_SIZE_CONVERSION_FAILED = Error converting to whole properties MultipartParserMaxSize
+peasCore.EX_MULTIPART_MAX_SIZE_PROPERTY_NOT_FOUND =  'MultipartParserMaxSize' property not found
 
 # Erreurs du kit Request Routeurs et Session Controllers
 
-peasCore.EX_REDIRECT_SERVICE_FAILED = Erreur du forward de la page
-peasCore.EX_REDIRECT_ERROR_PAGE_FAILED = Erreur lors du forward vers la page d'erreur
-peasCore.EX_CANT_GET_USER_PROFILE = Erreur pendant l'obtention du profil de l'utilisateur
-peasCore.EX_CANT_GET_USER_DETAIL = Impossible d'obtenir les infos sur l'utilisateur
-peasCore.EX_CANT_CREATE_COMPONENT_CONTEXT = Impossible de creer le contexte du composant
-peasCore.EX_SET_USER_SPACE = Impossible de fixer le nouvel espace
-peasCore.EX_SET_USER_COMPONENT = Impossible de fixer le nouveau composant
-peasCore.EX_UPDATE_USER_PROFILE = Erreur pendant la mise a jour du profil utilisateur
-peasCore.EX_LOGIN_SERVLET_CANT_CREATE_MAIN_SESSION_CTRL = La servlet de login ne peut pas creer le Main Session controller
-peasCore.EX_USER_KEY_NOT_FOUND = Aucun utilisateur defini avec cette cle
+peasCore.EX_REDIRECT_SERVICE_FAILED = Page forwarding error
+peasCore.EX_REDIRECT_ERROR_PAGE_FAILED = Error page forwarding error
+peasCore.EX_CANT_GET_USER_PROFILE = Error obtaining user profile 
+peasCore.EX_CANT_GET_USER_DETAIL = Error obtaining user info
+peasCore.EX_CANT_CREATE_COMPONENT_CONTEXT = Impossible to create the composant context
+peasCore.EX_SET_USER_SPACE = Impossible to fix the new space
+peasCore.EX_SET_USER_COMPONENT = Impossible to fix the new component
+peasCore.EX_UPDATE_USER_PROFILE = User profile update error
+peasCore.EX_LOGIN_SERVLET_CANT_CREATE_MAIN_SESSION_CTRL = The login servlet cannot create the Main Session controller
+peasCore.EX_USER_KEY_NOT_FOUND = No user defined for this key
 
-peasCore.MSG_SESSION_CONTROLLER_INSTANCIATED = Session Controller instancie
-peasCore.MSG_USER_NOT_ALLOWED = Utilisateur non autorise a acceder a composant
-peasCore.MSG_COMPONENT_AVAILABLE_FOR_USER = Composant disponible pour l'utilisateur
+peasCore.MSG_SESSION_CONTROLLER_INSTANCIATED = Session Controller instant
+peasCore.MSG_USER_NOT_ALLOWED = Utilisateur not authorised to access a componant
+peasCore.MSG_COMPONENT_AVAILABLE_FOR_USER = Composant available for the user
 peasCore.MSG_END_OF_HTTPSESSION = End of http session
 
 
