--- a/config-core/src/main/config/silvertrace/messages/peasUtilMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/peasUtilMessages_en.properties
@@ -21,5 +21,5 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-peasUtil.CANNOT_ACCESS_SUPERCLASS = Impossible d'acceder a la Superclass.init
-peasUtil.CANNOT_WRITE_STATISTICS = Impossible d'écrire les statistiques
+peasUtil.CANNOT_ACCESS_SUPERCLASS = Impossible to access the Superclass.init
+peasUtil.CANNOT_WRITE_STATISTICS = Impossible to write the statistics
