--- a/config-core/src/main/config/silvertrace/messages/portletMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/portletMessages_en.properties
@@ -21,18 +21,18 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-portlet.EX_CANT_USED_THIS_CONSTRUCTOR = Vous ne devez pas utiliser ce constructeur
-portlet.EX_SPACE_NULL =  Impossible d'obtenir la configuration de cet espace, l'espace demandé n'est pas valide
-portlet.EX_SPACE_EMPTY = Impossible d'obtenir la configuration de cet espace, l'espace demandé n'est pas valide
-portlet.EX_CANT_GET_SPACE_MODEL = Impossible d'obtenir la configuration de cet espace
-portlet.EX_CANT_SAVED_STATE = Impossible de sauvegarder la configuration de la portlet
-portlet.EX_ERROR_CLOSE = Impossible de fermer le flux
-portlet.EX_CANT_GET_PORTLET = Impossible d'obtenir la portlet
-portlet.EX_GET_LIST = Impossible d'obtenir la liste des portlet
-portlet.EX_CANT_SAVE_SPACE = Impossible de sauvegarder la configuration de l'espace
-portlet.MSG_NOT_MSC = Erreur, la session n'est plus valide
-portlet.EX_IO_ERROR_DESTINATION = Impossible d'atteindre la page demandée
-portlet.EX_S_ERROR_DESTINATION = Impossible d'atteindre la page demandée
-portlet.MSG_CANT_GET_DESTINATION = Impossible d'atteindre la page demandée
-portlet.MSG_CANT_GET_ERRORPAGE = Impossible d'atteindre la page d'erreur
-portlet.MSG_CANT_GET_LOGINPAGE  Impossible d'atteindre la page de login
+portlet.EX_CANT_USED_THIS_CONSTRUCTOR = You should not use this constructor
+portlet.EX_SPACE_NULL =  Impossible to obtain this space's configuration, the requested espace is not valid
+portlet.EX_SPACE_EMPTY = Impossible to obtain this space's configuration, the requested espace is not valid
+portlet.EX_CANT_GET_SPACE_MODEL = Impossible to obtain the configuration for this space
+portlet.EX_CANT_SAVED_STATE = Impossible to save a portlet configuration 
+portlet.EX_ERROR_CLOSE = Impossible to close the flux
+portlet.EX_CANT_GET_PORTLET = Impossible to get the portlet
+portlet.EX_GET_LIST = Impossible to obtain the list of portlets
+portlet.EX_CANT_SAVE_SPACE = Impossible to save the configuration for the space
+portlet.MSG_NOT_MSC = Error! The session is no longer valid
+portlet.EX_IO_ERROR_DESTINATION = Impossible to reach the page requested
+portlet.EX_S_ERROR_DESTINATION = Impossible to reach the page requested
+portlet.MSG_CANT_GET_DESTINATION = Impossible to reach the page requested
+portlet.MSG_CANT_GET_ERRORPAGE = Impossible to reach the error message
+portlet.MSG_CANT_GET_LOGINPAGE  Impossible to reach the login page
