--- a/config-core/src/main/config/silvertrace/messages/rootMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/rootMessages_en.properties
@@ -26,137 +26,136 @@
 
 # Files errors
 # -------------------------------------
-root.EX_CANT_READ_FILE                 = Impossible de lire le fichier 
-root.EX_CANT_WRITE_FILE                = Impossible d'écrire dans le fichier  
-root.EX_FILE_NOT_FOUND                 = Fichier non trouve
-root.EX_CANT_CREATE_FILE               = Impossible de créer le fichier
-root.EX_CANT_DELETE_FILE               = Impossible de supprimer le fichier
+root.EX_CANT_READ_FILE                 = Impossible to read the file
+root.EX_CANT_WRITE_FILE                = Impossible to write to the file 
+root.EX_FILE_NOT_FOUND                 = File not found
+root.EX_CANT_CREATE_FILE               = Impossible to create the file
+root.EX_CANT_DELETE_FILE               = Impossible to delete the file
 
 # Data access errors
 # -------------------------------------
-root.EX_CANT_INSTANCIATE_DB_DRIVER    = Impossible d'instancier le driver de BD
-root.EX_CONNECTION_OPEN_FAILED        = L'ouverture de la connexion a echoue
-root.EX_CONNECTION_CLOSE_FAILED       = La fermeture de la connexion a echoue
-root.EX_EMERGENCY_CONNECTION_CLOSE_FAILED = La fermeture d'urgence(suite a erreur) de la connexion a echoue
-root.EX_RESOURCE_CLOSE_FAILED         = La fermeture du resultset ou du statement a echoue
+root.EX_CANT_INSTANCIATE_DB_DRIVER    = Connection failed to open
+root.EX_CONNECTION_CLOSE_FAILED       = Connection failed to close
+root.EX_EMERGENCY_CONNECTION_CLOSE_FAILED = Emergency closure (after error) failed
+root.EX_RESOURCE_CLOSE_FAILED         = The closure of the resultset or statement failed
 
-root.EX_ERR_COMMIT                    = Une erreur est survenue pendant un commit
-root.EX_ERR_ROLLBACK                  = Une erreur est survenue pendant un rollback
+root.EX_ERR_COMMIT                    = Error during commit
+root.EX_ERR_ROLLBACK                  = Error during rollback
 
-root.EX_TABLE_CREATION_FAILED         = La creation de la table a echoue
-root.EX_TABLE_DELETE_FAILED           = La destruction de la table a echoue
+root.EX_TABLE_CREATION_FAILED         = Failure to create table
+root.EX_TABLE_DELETE_FAILED           = Failure to destroy table
 
-root.EX_RECORD_NOT_FOUND              = L'enregistrement n'a pas ete trouve
-root.EX_RECORD_INSERTION_FAILED       = L'insertion d'un enregistrement a echoue
-root.EX_RECORD_DELETE_FAILED          = La suppression d'un enregistrement a echoue
-root.EX_RECORD_UPDATE_FAILED          = La mise a jour d'un enregistrement a echoue
+root.EX_RECORD_NOT_FOUND              = Save not found
+root.EX_RECORD_INSERTION_FAILED       = Failed to insert save
+root.EX_RECORD_DELETE_FAILED          = Failed to delete save
+root.EX_RECORD_UPDATE_FAILED          = Failed to update save
 
-root.EX_SQL_QUERY_FAILED              = La requete SQL a echouee
-root.EX_GET_NEXTID_FAILED             = Impossible de récupérer le prochain id
+root.EX_SQL_QUERY_FAILED              = SQL request failure
+root.EX_GET_NEXTID_FAILED             = Impossible to obtain the next ID
 
 # EJB errors
 # -------------------------------------
-root.EX_CANT_GET_REMOTE_OBJECT        = Impossible d'obtenir l'objet distant
-root.EX_CANT_FIND_ENTITY              = Impossible de trouver l'EJB Entity
-root.EX_CANT_STORE_ENTITY_ATTRIBUTES  = Impossible de stocker les attributs de l'EJB Entity
-root.EX_CANT_LOAD_ENTITY_ATTRIBUTES   = Impossible de récuperer les attributs de l'EJB Entity
-root.EX_CANT_INSERT_ENTITY_ATTRIBUTES = Impossible d'insérer les attributs de l'EJB Entity lors de sa création
-root.EX_CANT_DELETE_ENTITY            = Impossible de supprimer l'EJB Entity
+root.EX_CANT_GET_REMOTE_OBJECT        = Impossible to obtain the distant object
+root.EX_CANT_FIND_ENTITY              = Impossible to find the EJB Entity
+root.EX_CANT_STORE_ENTITY_ATTRIBUTES  = Impossible to stock the attributs of the EJB Entity
+root.EX_CANT_LOAD_ENTITY_ATTRIBUTES   = Impossible to get attributs of the EJB Entity
+root.EX_CANT_INSERT_ENTITY_ATTRIBUTES = Impossible to insert attributs of the EJB Entity during creation
+root.EX_CANT_DELETE_ENTITY            = Impossible to delete EJB Entity
 
 # Instanciators errors
 # -------------------------------------
-root.DELETING_DATA_OF_INSTANCE_FAILED = Impossible de supprimer les données dans la base lors de la désinstanciation
-root.CREATING_DATA_DIRECTORY_FAILED   = Impossible de créer le répertoire des images et pièces jointes
-root.DELETING_DATA_DIRECTORY_FAILED   = Impossible de supprimer le répertoire des images et pièces jointes lors de la désinstanciation
+root.DELETING_DATA_OF_INSTANCE_FAILED = Impossible to delete the data in the database during de-instancing
+root.CREATING_DATA_DIRECTORY_FAILED   = Impossible to create the folder of images and attached files
+root.DELETING_DATA_DIRECTORY_FAILED   = Impossible to delete the folder épertoire of images and attached files during de-instancing
 
 # Divers errors
 # -------------------------------------
-root.EX_CLASS_NOT_INITIALIZED         = Classe non initialisee
-root.EX_INVALID_ARG                   = Argument invalide
-root.EX_XML_PARSING_FAILED            = Erreur pendant le parsing d'un fichier XML
-root.EX_CANT_GET_LANGUAGE_RESOURCE    = Impossible de recuperer le fichier de ressources dans le language demandé
-root.EX_BAD_USER_RIGHT                = The user have not the right to access to this page
+root.EX_CLASS_NOT_INITIALIZED         = Class non initialised
+root.EX_INVALID_ARG                   = Argument invalid
+root.EX_XML_PARSING_FAILED            = Error during the parsing of an XML file
+root.EX_CANT_GET_LANGUAGE_RESOURCE    = Impossible to obtain the ressource file in the requested language
+root.EX_BAD_USER_RIGHT                = The user does not have access rights to this page
 
 # Dates
 # -------------------------------------
-root.EX_CANT_PARSE_DATE               = Impossible d'evaluer la date
-root.EX_CANT_FORMAT_DATE              = Impossible de formater la date
-root.EX_CONVERT_DATE_FAILED           = Impossible de convertir la date au format voulu
+root.EX_CANT_PARSE_DATE               = Impossible to evaluate the date
+root.EX_CANT_FORMAT_DATE              = Impossible to format the date
+root.EX_CONVERT_DATE_FAILED           = Impossible to convert the date to the requested format
 
 # Warnings or Infos
 # -------------------------------------
 root.EX_NO_MESSAGE                    = 
-root.EX_IGNORED                       = Exception ignoree
+root.EX_IGNORED                       = Exception ignored
 
 # INFO general messages
 # -------------------------------------
-root.MSG_GEN_ENTER_METHOD             = Debut de methode
-root.MSG_GEN_EXIT_METHOD              = Fin de methode
-root.MSG_GEN_PARAM_VALUE              = Valeur de Param
-root.MSG_GEN_RETURN_VALUE             = Valeur de retour
-root.MSG_GEN_SESSION_TIMEOUT          = La session a expiree
+root.MSG_GEN_ENTER_METHOD             = Start of method
+root.MSG_GEN_EXIT_METHOD              = End of method
+root.MSG_GEN_PARAM_VALUE              = Param value
+root.MSG_GEN_RETURN_VALUE             = Return value
+root.MSG_GEN_SESSION_TIMEOUT          = Session timed out
 
 # Erreurs standards a lever en retour d'appel des fonctions de certains elements du bus
 # -------------------------------------
 
 # Indexation messages
-root.EX_INDEX_PUBLICATIONS_FAILED = Impossible d'indexer les publications
-root.EX_INDEX_TOPICS_FAILED = Impossible d'indexer les themes
-root.EX_INDEX_FAILED = L'indexation a echouee
-root.EX_INDEX_DELETE_FAILED = Impossible de supprimer l'indexation de l'élément
+root.EX_INDEX_PUBLICATIONS_FAILED = Impossible to index the publications
+root.EX_INDEX_TOPICS_FAILED = Impossible to index the themes
+root.EX_INDEX_FAILED = Indexation has failed
+root.EX_INDEX_DELETE_FAILED = Impossible to delete the indexation of an element
 
 # Clipboard errors
-root.EX_CLIPBOARD_COPY_FAILED = Impossible de copier dans le presse-papiers
-root.EX_CLIPBOARD_PASTE_FAILED = Impossible de coller du presse-papiers
+root.EX_CLIPBOARD_COPY_FAILED = Impossible to copy to clipboard
+root.EX_CLIPBOARD_PASTE_FAILED = Impossible to paste to clipboard
 
 # Bookmark errors
-root.EX_FAVORITE_ADD_ALREADY_EXISTS = Ce favori existe déja
-root.EX_ADD_TO_FAVORITE_FAILED = Impossible d'ajouter aux favoris
-root.EX_GET_FAVORITES_FAILED = Impossible de récupérer les favoris
-root.EX_DELETE_FAVORITE_FAILED = Impossible de supprimer un favori
-root.EX_DELETE_FAVORITES_ON_TOPIC_FAILED = Impossible de supprimer les favoris sur le theme
+root.EX_FAVORITE_ADD_ALREADY_EXISTS = This favorite exists already
+root.EX_ADD_TO_FAVORITE_FAILED = Impossible to add to favorites
+root.EX_GET_FAVORITES_FAILED = Impossible to obtain favorites
+root.EX_DELETE_FAVORITE_FAILED = Impossible to delete a favorite
+root.EX_DELETE_FAVORITES_ON_TOPIC_FAILED = Impossible to delete the favorites on the theme
 
 # Wysiwyg errors
 root.EX_DISPLAY_WYSIWYG_FAILED = Impossible d'afficher le document en WYSIWYG
  
 # Attachment errors
-root.EX_LOAD_ATTACHMENT_FAILED  = Impossible de récupérer le document attaché
-root.EX_DELETE_ATTACHMENT_FAILED = Impossible de supprimer le document attaché
+root.EX_LOAD_ATTACHMENT_FAILED  = Impossible to retrieve the attached document 
+root.EX_DELETE_ATTACHMENT_FAILED = Impossible to delete the attached document
  
 # Reading states messages
-root.EX_GET_READING_STATES_FAILED = Impossible d'obtenir les états de lecture
-root.EX_UPDATE_READING_STATES_FAILED = Impossible de modifier les contrôles de lecture
-root.EX_DELETE_READING_STATES_FAILED = Impossible de supprimer les contrôles de lecture
+root.EX_GET_READING_STATES_FAILED = Impossible to get the reading status
+root.EX_UPDATE_READING_STATES_FAILED = Impossible to modify the reading controls
+root.EX_DELETE_READING_STATES_FAILED = Impossible to delete the reading controls
  
 # Search Engine errors
-root.EX_SEARCH_ENGINE_FAILED = Impossible d'accéder au moteur de recherche
+root.EX_SEARCH_ENGINE_FAILED = Impossible to access the search engine
 
 # Notification messages
-root.EX_NOTIFY_USERS_FAILED = Impossible d'alerter les utilisateurs
-root.EX_NOTIFY_PUBLISHERS_FAILED = Impossible d'alerter les publieurs
+root.EX_NOTIFY_USERS_FAILED = Impossible to alert users
+root.EX_NOTIFY_PUBLISHERS_FAILED = Impossible to alert publishers
 
 # Subscriptions messages
-root.EX_SUBSCRIBE_TOPIC_FAILED = Impossible de s'abonner à ce thème
-root.EX_GET_SUBSCRIPTIONS_FAILED = Impossible d'obtenir les abonnements
-root.EX_DELETE_SUBSCRIPTION_FAILED = Impossible de supprimer l'abonnement
-root.EX_DELETE_SUBSCRIPTIONS_ON_TOPIC_FAILED = Impossible de supprimer l'abonnement sur le theme
+root.EX_SUBSCRIBE_TOPIC_FAILED = Impossible to subscribe to this theme
+root.EX_GET_SUBSCRIPTIONS_FAILED = Impossible to obtain subscriptions
+root.EX_DELETE_SUBSCRIPTION_FAILED = Impossible to delete the subscription
+root.EX_DELETE_SUBSCRIPTIONS_ON_TOPIC_FAILED = Impossible to delete the subscription to the theme
 
 # Publication messages
-root.EX_CREATE_TOPIC_FAILED = Impossible de créer le theme
-root.EX_UPDATE_TOPIC_FAILED = Impossible de modifier le theme
-root.EX_DELETE_TOPIC_FAILED = Impossible de supprimer le theme
-root.EX_GET_TOPIC_INFOS_FAILED = Impossible d'obtenir les informations du theme
+root.EX_CREATE_TOPIC_FAILED = Impossible to create the theme
+root.EX_UPDATE_TOPIC_FAILED = Impossible to modify the theme
+root.EX_DELETE_TOPIC_FAILED = Impossible to delete the theme
+root.EX_GET_TOPIC_INFOS_FAILED = Impossible to get information on the theme
 
-root.EX_CREATE_PUBLICATION_FAILED = Imossible de créer la publication
-root.EX_UPDATE_PUBLICATION_FAILED = Impossible de modifier la publication
-root.EX_DELETE_PUBLICATION_FAILED = Impossible de supprimer la publication
-root.EX_GET_PUBLICATION_FAILED = Impossible de récupérer la publication
-root.EX_GET_PUBLICATION_FATHER_FAILED = Impossible d'obtenir le père de la publication
-root.EX_GET_PUBLICATION_CONTENT_FAILED = Impossible d'obtenir le contenu de la publication
-root.EX_UPDATE_PUBLICATION_CONTENT_FAILED = Impossible de modifier le contenu de la publication
-root.EX_ADD_PUBLICATION_IN_FOLDER_FAILED = Impossible d'ajouter la publication dans le dossier
+root.EX_CREATE_PUBLICATION_FAILED = Imossible dto create the publication
+root.EX_UPDATE_PUBLICATION_FAILED = Impossible to modify the publication
+root.EX_DELETE_PUBLICATION_FAILED = Impossible to delete publication
+root.EX_GET_PUBLICATION_FAILED = Impossible to retrieve the publication
+root.EX_GET_PUBLICATION_FATHER_FAILED = Impossible to obtain the publication father
+root.EX_GET_PUBLICATION_CONTENT_FAILED = Impossible to obtain the publication's contents
+root.EX_UPDATE_PUBLICATION_CONTENT_FAILED = Impossible to modify the publication's content
+root.EX_ADD_PUBLICATION_IN_FOLDER_FAILED = Impossible to add the publication to the folder
 
-root.EX_DELETE_ATTACHMENTS_PUBLICATION_FAILED = Impossible de supprimer les fichiers attachés de la publication
+root.EX_DELETE_ATTACHMENTS_PUBLICATION_FAILED = Impossible to delete the the publication's attached files
 
 root.DRAG_AND_DROP_FAILED = Drag and drop failed
 
@@ -164,8 +163,8 @@ root.DRAG_AND_DROP_FAILED = Drag and drop failed
 #
 # NEW NEW NEW
 
-root.MSG_EJB_CREATE_FAILED   = Couldn't create a EJB
-root.EX_SQL_EXCEPTION        = SQLException occures
+root.MSG_EJB_CREATE_FAILED   = Couldn't create an EJB
+root.EX_SQL_EXCEPTION        = SQLException occurred
 root.EX_PK_GENERATION_FAILED = Couldn't generate new primary key
 root.EX_LOAD_IO_EXCEPTION    = IOException. Cant load file
 root.REMOTE_EXCEPTION        = Remote exception
