--- a/config-core/src/main/config/silvertrace/messages/scoreMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/scoreMessages_en.properties
@@ -23,20 +23,20 @@
 #
 # MODULE : score
 #
-score.MSG_ERR_GENERAL  = Erreur dans le module score
-score.EX_RECORD_GETNEXTID_FAILED = Impossible d'obtenir le prochain id en base de données lors de l'insertion de données
-score.EX_GET_USER_NB_PARTICIPATION_FAILED = Impossible d'obtenir le nombre de participations par utilisateur
-score.EX_GET_USER_POSITION_FAILED = Impossible d'obtenir la position de l'utilisateur pour ce questionnaire et pour cette participation
-score.EX_CREATE_SCORE_FAILED = Impossible d'ajouter le score
-score.EX_UPDATE_SCORE_FAILED = Impossible de modifier le score
-score.EX_DELETE_SCORE_FAILED = Impossible de supprimer le score
-score.EX_GET_ALL_SCORES_FAILED = Impossible d'obtenir tous les scores
-score.EX_GET_USER_SCORES_FAILED = Impossible d'obtenir les scores de l'utilisateur
-score.EX_GET_PARTICIPATION_USER_SCORES_FAILED = Impossible d'obtenir les scores de l'utilisateur pour cette participation
-score.EX_GET_BEST_SCORES_FAILED = Impossible d'obtenir les meilleurs scores par questionnaire
-score.EX_GET_WORST_SCORES_FAILED = Impossible d'obtenir les plus mauvais scores par questionnaire
-score.EX_GET_NB_PLAYERS_FAILED = Impossible d'obtenir le nombre de participant par questionnaire
-score.EX_GET_AVERAGE_SCORE_FAILED = Impossible d'obtenir le score moyen par questionnaire
-score.EX_GET_USER_SCORE_FAILED = Impossible d'obtenir le score de l'utilisateur pour ce questionnaire et cette participation
-score.EX_GET_SCORES_FAILED = Impossible d'obtenir les scores pour ce questionnaire
+score.MSG_ERR_GENERAL  = Module score error
+score.EX_RECORD_GETNEXTID_FAILED = Impossible to get the next database ID during data insertion
+score.EX_GET_USER_NB_PARTICIPATION_FAILED = Impossible to obtain the number of participations per user
+score.EX_GET_USER_POSITION_FAILED = Impossible to obtain the user position for this questionnaire and participation
+score.EX_CREATE_SCORE_FAILED = Impossible to add the score
+score.EX_UPDATE_SCORE_FAILED = Impossible to modify the score
+score.EX_DELETE_SCORE_FAILED = Impossible dto delete the score
+score.EX_GET_ALL_SCORES_FAILED = Impossible to obtain the scores
+score.EX_GET_USER_SCORES_FAILED = Impossible to obtain the user scores
+score.EX_GET_PARTICIPATION_USER_SCORES_FAILED = Impossible to obtain the user scores for this participation
+score.EX_GET_BEST_SCORES_FAILED = Impossible to obtain the best scores per questionnaire
+score.EX_GET_WORST_SCORES_FAILED = Impossible to obtain the worst scores par questionnaire
+score.EX_GET_NB_PLAYERS_FAILED = Impossible to obtain the number of participants per questionnaire
+score.EX_GET_AVERAGE_SCORE_FAILED = Impossible the average score per questionnaire
+score.EX_GET_USER_SCORE_FAILED = Impossible to obtain the user score for this questionnaire and participation
+score.EX_GET_SCORES_FAILED = Impossible to obtain the scores for this questionnaire
 
