--- a/config-core/src/main/config/silvertrace/messages/silvertraceMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/silvertraceMessages_en.properties
@@ -23,12 +23,12 @@
 #
 # MODULE : util 
 #
-silvertrace.MSG_END_OF_INIT                    = Fin de l'initialisation du module SilverTrace
-silvertrace.ERR_INIT_TRACE_FROM_PROP           = Erreur pendant le chargement d'un fichier de proprietes de traces
-silvertrace.ERR_INIT_TRACE                     = Erreur pendant l'initialisation des proprietes des modules
-silvertrace.ERR_INIT_APPENDER_FROM_PROP        = Impossible d'initialiser les appenders a partir du fichier de propriete
-silvertrace.ERR_CANT_ADD_APPENDER              = L'appender n'a pas pu etre attache
-silvertrace.ERR_TRACE_MESSAGES_FILE_ERROR      = Erreur pendant la lecture d'un fichier de messages de traces
-silvertrace.ERR_PATH_NOT_FOUND                 = Le chemin d'accès aux fichiers de traces est faux
-silvertrace.ERR_NO_PROP_FILES_FOUND            = Aucun fichier de propriete trouve au chemin indique
-silvertrace.ERR_RUNTIME_ERROR_OCCUR            = UNE ERREUR RUNTIME EST APPARUE DANS SILVERTRACE !!!!
+silvertrace.MSG_END_OF_INIT                    = End of the initialisation of the SilverTrace module 
+silvertrace.ERR_INIT_TRACE_FROM_PROP           = Error during the loading of a traces properties file
+silvertrace.ERR_INIT_TRACE                     = Error during the initialisation of the module properties
+silvertrace.ERR_INIT_APPENDER_FROM_PROP        = Impossible to initialise the appenders from the properties file
+silvertrace.ERR_CANT_ADD_APPENDER              = The appender could not be attached
+silvertrace.ERR_TRACE_MESSAGES_FILE_ERROR      = Error during the reading of a traces message file
+silvertrace.ERR_PATH_NOT_FOUND                 = The access path to the trace files is wrong
+silvertrace.ERR_NO_PROP_FILES_FOUND            = No proprieties file has an identical path
+silvertrace.ERR_RUNTIME_ERROR_OCCUR            = A RUNTIME ERROR HAS APPEARED IN SILVERTRACE!
